// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`build > build all 1`] = `
{
  "index": {
    "css": ":root {
  --primary: 22 119 255;
  --primary-hover: 64 150 255;
  --primary-active: 9 88 217;
  --primary-content: 255 255 255;
  --success: 82 196 26;
  --success-hover: 115 209 61;
  --success-active: 56 158 13;
  --success-content: 255 255 255;
  --warning: 250 173 20;
  --warning-hover: 255 197 61;
  --warning-active: 212 136 6;
  --warning-content: 255 255 255;
  --error: 245 34 45;
  --error-hover: 255 77 79;
  --error-active: 207 19 34;
  --error-content: 255 255 255;
  --neutral: 102 102 102;
  --neutral-hover: 115 115 115;
  --neutral-active: 64 64 64;
  --neutral-content: 255 255 255;
  --secondary: 235 47 150;
  --secondary-hover: 247 89 171;
  --secondary-active: 196 29 127;
  --secondary-content: 255 255 255;
  --accent: 19 194 194;
  --accent-hover: 54 207 201;
  --accent-active: 8 151 156;
  --accent-content: 255 255 255;
  --info: 47 84 235;
  --info-hover: 89 126 247;
  --info-active: 29 57 196;
  --info-content: 255 255 255;
  --base-100: 255 255 255;
  --base-200: 242 242 242;
  --base-300: 229 230 230;
  --base-content: 31 41 55;
  --ant-neutral-100: 255 255 255;
  --ant-neutral-200: 250 250 250;
  --ant-neutral-300: 245 245 245;
  --ant-neutral-400: 240 240 240;
  --ant-neutral-500: 217 217 217;
  --ant-neutral-600: 191 191 191;
  --ant-neutral-700: 140 140 140;
  --ant-neutral-800: 89 89 89;
  --ant-neutral-900: 67 67 67;
  --ant-neutral-1000: 38 38 38;
  --ant-neutral-1100: 31 31 31;
  --ant-neutral-1200: 20 20 20;
  --ant-neutral-1300: 0 0 0;
  --rounded-box: 1rem;
  --rounded-btn: 0.5rem;
  --rounded-badge: 1.9rem;
  --animation-btn: 0.25s;
  --animation-input: 0.2s;
  --skeleton-duration: 1.2s;
  --border-btn: 1px;
  --tab-border: 1px;
  --tab-radius: 0.5rem ;
}

[data-mode=dark] {
  --primary: 22 104 220;
  --primary-hover: 21 84 173;
  --primary-active: 60 137 232;
  --primary-content: 255 255 255;
  --success: 73 170 25;
  --success-hover: 60 134 24;
  --success-active: 106 190 57;
  --success-content: 255 255 255;
  --warning: 216 150 20;
  --warning-hover: 170 119 20;
  --warning-active: 232 179 57;
  --warning-content: 255 255 255;
  --error: 211 32 41;
  --error-hover: 166 29 36;
  --error-active: 232 71 73;
  --error-content: 255 255 255;
  --neutral: 90 90 90;
  --neutral-hover: 73 73 73;
  --neutral-active: 106 106 106;
  --neutral-content: 255 255 255;
  --secondary: 203 43 131;
  --secondary-hover: 160 38 105;
  --secondary-active: 224 82 156;
  --secondary-content: 255 255 255;
  --accent: 19 168 168;
  --accent-hover: 19 133 133;
  --accent-active: 51 188 183;
  --accent-content: 255 255 255;
  --info: 43 74 203;
  --info-hover: 38 62 160;
  --info-active: 82 115 224;
  --info-content: 255 255 255;
  --base-100: 29 35 42;
  --base-200: 25 30 36;
  --base-300: 21 25 30;
  --base-content: 166 173 187;
  --ant-neutral-1300: 255 255 255;
  --ant-neutral-1200: 250 250 250;
  --ant-neutral-1100: 245 245 245;
  --ant-neutral-1000: 240 240 240;
  --ant-neutral-900: 217 217 217;
  --ant-neutral-800: 191 191 191;
  --ant-neutral-700: 140 140 140;
  --ant-neutral-600: 89 89 89;
  --ant-neutral-500: 67 67 67;
  --ant-neutral-400: 38 38 38;
  --ant-neutral-300: 31 31 31;
  --ant-neutral-200: 20 20 20;
  --ant-neutral-100: 0 0 0;
  --rounded-box: 1rem;
  --rounded-btn: 0.5rem;
  --rounded-badge: 1.9rem;
  --animation-btn: 0.25s;
  --animation-input: 0.2s;
  --skeleton-duration: 1.2s;
  --border-btn: 1px;
  --tab-border: 1px;
  --tab-radius: 0.5rem ;
}",
    "cssInJs": {
      ":root": {
        "--ice-accent": "19 194 194",
        "--ice-accent-active": "8 151 156",
        "--ice-accent-content": "255 255 255",
        "--ice-accent-hover": "54 207 201",
        "--ice-animation-btn": "0.25s",
        "--ice-animation-input": "0.2s",
        "--ice-ant-neutral-100": "255 255 255",
        "--ice-ant-neutral-1000": "38 38 38",
        "--ice-ant-neutral-1100": "31 31 31",
        "--ice-ant-neutral-1200": "20 20 20",
        "--ice-ant-neutral-1300": "0 0 0",
        "--ice-ant-neutral-200": "250 250 250",
        "--ice-ant-neutral-300": "245 245 245",
        "--ice-ant-neutral-400": "240 240 240",
        "--ice-ant-neutral-500": "217 217 217",
        "--ice-ant-neutral-600": "191 191 191",
        "--ice-ant-neutral-700": "140 140 140",
        "--ice-ant-neutral-800": "89 89 89",
        "--ice-ant-neutral-900": "67 67 67",
        "--ice-base-100": "255 255 255",
        "--ice-base-200": "242 242 242",
        "--ice-base-300": "229 230 230",
        "--ice-base-content": "31 41 55",
        "--ice-border-btn": "1px",
        "--ice-error": "245 34 45",
        "--ice-error-active": "207 19 34",
        "--ice-error-content": "255 255 255",
        "--ice-error-hover": "255 77 79",
        "--ice-info": "47 84 235",
        "--ice-info-active": "29 57 196",
        "--ice-info-content": "255 255 255",
        "--ice-info-hover": "89 126 247",
        "--ice-neutral": "102 102 102",
        "--ice-neutral-active": "64 64 64",
        "--ice-neutral-content": "255 255 255",
        "--ice-neutral-hover": "115 115 115",
        "--ice-primary": "22 119 255",
        "--ice-primary-active": "9 88 217",
        "--ice-primary-content": "255 255 255",
        "--ice-primary-hover": "64 150 255",
        "--ice-rounded-badge": "1.9rem",
        "--ice-rounded-box": "1rem",
        "--ice-rounded-btn": "0.5rem",
        "--ice-secondary": "235 47 150",
        "--ice-secondary-active": "196 29 127",
        "--ice-secondary-content": "255 255 255",
        "--ice-secondary-hover": "247 89 171",
        "--ice-skeleton-duration": "1.2s",
        "--ice-success": "82 196 26",
        "--ice-success-active": "56 158 13",
        "--ice-success-content": "255 255 255",
        "--ice-success-hover": "115 209 61",
        "--ice-tab-border": "1px",
        "--ice-tab-radius": "0.5rem ",
        "--ice-warning": "250 173 20",
        "--ice-warning-active": "212 136 6",
        "--ice-warning-content": "255 255 255",
        "--ice-warning-hover": "255 197 61",
      },
      "[data-mode=dark]": {
        "--ice-accent": "19 168 168",
        "--ice-accent-active": "51 188 183",
        "--ice-accent-content": "255 255 255",
        "--ice-accent-hover": "19 133 133",
        "--ice-animation-btn": "0.25s",
        "--ice-animation-input": "0.2s",
        "--ice-ant-neutral-100": "0 0 0",
        "--ice-ant-neutral-1000": "240 240 240",
        "--ice-ant-neutral-1100": "245 245 245",
        "--ice-ant-neutral-1200": "250 250 250",
        "--ice-ant-neutral-1300": "255 255 255",
        "--ice-ant-neutral-200": "20 20 20",
        "--ice-ant-neutral-300": "31 31 31",
        "--ice-ant-neutral-400": "38 38 38",
        "--ice-ant-neutral-500": "67 67 67",
        "--ice-ant-neutral-600": "89 89 89",
        "--ice-ant-neutral-700": "140 140 140",
        "--ice-ant-neutral-800": "191 191 191",
        "--ice-ant-neutral-900": "217 217 217",
        "--ice-base-100": "29 35 42",
        "--ice-base-200": "25 30 36",
        "--ice-base-300": "21 25 30",
        "--ice-base-content": "166 173 187",
        "--ice-border-btn": "1px",
        "--ice-error": "211 32 41",
        "--ice-error-active": "232 71 73",
        "--ice-error-content": "255 255 255",
        "--ice-error-hover": "166 29 36",
        "--ice-info": "43 74 203",
        "--ice-info-active": "82 115 224",
        "--ice-info-content": "255 255 255",
        "--ice-info-hover": "38 62 160",
        "--ice-neutral": "90 90 90",
        "--ice-neutral-active": "106 106 106",
        "--ice-neutral-content": "255 255 255",
        "--ice-neutral-hover": "73 73 73",
        "--ice-primary": "22 104 220",
        "--ice-primary-active": "60 137 232",
        "--ice-primary-content": "255 255 255",
        "--ice-primary-hover": "21 84 173",
        "--ice-rounded-badge": "1.9rem",
        "--ice-rounded-box": "1rem",
        "--ice-rounded-btn": "0.5rem",
        "--ice-secondary": "203 43 131",
        "--ice-secondary-active": "224 82 156",
        "--ice-secondary-content": "255 255 255",
        "--ice-secondary-hover": "160 38 105",
        "--ice-skeleton-duration": "1.2s",
        "--ice-success": "73 170 25",
        "--ice-success-active": "106 190 57",
        "--ice-success-content": "255 255 255",
        "--ice-success-hover": "60 134 24",
        "--ice-tab-border": "1px",
        "--ice-tab-radius": "0.5rem ",
        "--ice-warning": "216 150 20",
        "--ice-warning-active": "232 179 57",
        "--ice-warning-content": "255 255 255",
        "--ice-warning-hover": "170 119 20",
      },
    },
    "cssRoot": null,
    "cvaParams": undefined,
    "resolvedCss": ":root {
  --ice-primary: 22 119 255;
  --ice-primary-hover: 64 150 255;
  --ice-primary-active: 9 88 217;
  --ice-primary-content: 255 255 255;
  --ice-success: 82 196 26;
  --ice-success-hover: 115 209 61;
  --ice-success-active: 56 158 13;
  --ice-success-content: 255 255 255;
  --ice-warning: 250 173 20;
  --ice-warning-hover: 255 197 61;
  --ice-warning-active: 212 136 6;
  --ice-warning-content: 255 255 255;
  --ice-error: 245 34 45;
  --ice-error-hover: 255 77 79;
  --ice-error-active: 207 19 34;
  --ice-error-content: 255 255 255;
  --ice-neutral: 102 102 102;
  --ice-neutral-hover: 115 115 115;
  --ice-neutral-active: 64 64 64;
  --ice-neutral-content: 255 255 255;
  --ice-secondary: 235 47 150;
  --ice-secondary-hover: 247 89 171;
  --ice-secondary-active: 196 29 127;
  --ice-secondary-content: 255 255 255;
  --ice-accent: 19 194 194;
  --ice-accent-hover: 54 207 201;
  --ice-accent-active: 8 151 156;
  --ice-accent-content: 255 255 255;
  --ice-info: 47 84 235;
  --ice-info-hover: 89 126 247;
  --ice-info-active: 29 57 196;
  --ice-info-content: 255 255 255;
  --ice-base-100: 255 255 255;
  --ice-base-200: 242 242 242;
  --ice-base-300: 229 230 230;
  --ice-base-content: 31 41 55;
  --ice-ant-neutral-100: 255 255 255;
  --ice-ant-neutral-200: 250 250 250;
  --ice-ant-neutral-300: 245 245 245;
  --ice-ant-neutral-400: 240 240 240;
  --ice-ant-neutral-500: 217 217 217;
  --ice-ant-neutral-600: 191 191 191;
  --ice-ant-neutral-700: 140 140 140;
  --ice-ant-neutral-800: 89 89 89;
  --ice-ant-neutral-900: 67 67 67;
  --ice-ant-neutral-1000: 38 38 38;
  --ice-ant-neutral-1100: 31 31 31;
  --ice-ant-neutral-1200: 20 20 20;
  --ice-ant-neutral-1300: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}

[data-mode=dark] {
  --ice-primary: 22 104 220;
  --ice-primary-hover: 21 84 173;
  --ice-primary-active: 60 137 232;
  --ice-primary-content: 255 255 255;
  --ice-success: 73 170 25;
  --ice-success-hover: 60 134 24;
  --ice-success-active: 106 190 57;
  --ice-success-content: 255 255 255;
  --ice-warning: 216 150 20;
  --ice-warning-hover: 170 119 20;
  --ice-warning-active: 232 179 57;
  --ice-warning-content: 255 255 255;
  --ice-error: 211 32 41;
  --ice-error-hover: 166 29 36;
  --ice-error-active: 232 71 73;
  --ice-error-content: 255 255 255;
  --ice-neutral: 90 90 90;
  --ice-neutral-hover: 73 73 73;
  --ice-neutral-active: 106 106 106;
  --ice-neutral-content: 255 255 255;
  --ice-secondary: 203 43 131;
  --ice-secondary-hover: 160 38 105;
  --ice-secondary-active: 224 82 156;
  --ice-secondary-content: 255 255 255;
  --ice-accent: 19 168 168;
  --ice-accent-hover: 19 133 133;
  --ice-accent-active: 51 188 183;
  --ice-accent-content: 255 255 255;
  --ice-info: 43 74 203;
  --ice-info-hover: 38 62 160;
  --ice-info-active: 82 115 224;
  --ice-info-content: 255 255 255;
  --ice-base-100: 29 35 42;
  --ice-base-200: 25 30 36;
  --ice-base-300: 21 25 30;
  --ice-base-content: 166 173 187;
  --ice-ant-neutral-1300: 255 255 255;
  --ice-ant-neutral-1200: 250 250 250;
  --ice-ant-neutral-1100: 245 245 245;
  --ice-ant-neutral-1000: 240 240 240;
  --ice-ant-neutral-900: 217 217 217;
  --ice-ant-neutral-800: 191 191 191;
  --ice-ant-neutral-700: 140 140 140;
  --ice-ant-neutral-600: 89 89 89;
  --ice-ant-neutral-500: 67 67 67;
  --ice-ant-neutral-400: 38 38 38;
  --ice-ant-neutral-300: 31 31 31;
  --ice-ant-neutral-200: 20 20 20;
  --ice-ant-neutral-100: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}",
    "resolvedCssRoot": null,
    "root": null,
    "scss": ":root {
    --primary: 22 119 255;
    --primary-hover: 64 150 255;
    --primary-active: 9 88 217;
    --primary-content: 255 255 255;
    --success: 82 196 26;
    --success-hover: 115 209 61;
    --success-active: 56 158 13;
    --success-content: 255 255 255;
    --warning: 250 173 20;
    --warning-hover: 255 197 61;
    --warning-active: 212 136 6;
    --warning-content: 255 255 255;
    --error: 245 34 45;
    --error-hover: 255 77 79;
    --error-active: 207 19 34;
    --error-content: 255 255 255;
    --neutral: 102 102 102;
    --neutral-hover: 115 115 115;
    --neutral-active: 64 64 64;
    --neutral-content: 255 255 255;
    --secondary: 235 47 150;
    --secondary-hover: 247 89 171;
    --secondary-active: 196 29 127;
    --secondary-content: 255 255 255;
    --accent: 19 194 194;
    --accent-hover: 54 207 201;
    --accent-active: 8 151 156;
    --accent-content: 255 255 255;
    --info: 47 84 235;
    --info-hover: 89 126 247;
    --info-active: 29 57 196;
    --info-content: 255 255 255;
    --base-100: 255 255 255;
    --base-200: 242 242 242;
    --base-300: 229 230 230;
    --base-content: 31 41 55;
    --ant-neutral-100: 255 255 255;
    --ant-neutral-200: 250 250 250;
    --ant-neutral-300: 245 245 245;
    --ant-neutral-400: 240 240 240;
    --ant-neutral-500: 217 217 217;
    --ant-neutral-600: 191 191 191;
    --ant-neutral-700: 140 140 140;
    --ant-neutral-800: 89 89 89;
    --ant-neutral-900: 67 67 67;
    --ant-neutral-1000: 38 38 38;
    --ant-neutral-1100: 31 31 31;
    --ant-neutral-1200: 20 20 20;
    --ant-neutral-1300: 0 0 0;
    --rounded-box: 1rem;
    --rounded-btn: 0.5rem;
    --rounded-badge: 1.9rem;
    --animation-btn: 0.25s;
    --animation-input: 0.2s;
    --skeleton-duration: 1.2s;
    --border-btn: 1px;
    --tab-border: 1px;
    --tab-radius: 0.5rem
}
[data-mode="dark"] {
    --primary: 22 104 220;
    --primary-hover: 21 84 173;
    --primary-active: 60 137 232;
    --primary-content: 255 255 255;
    --success: 73 170 25;
    --success-hover: 60 134 24;
    --success-active: 106 190 57;
    --success-content: 255 255 255;
    --warning: 216 150 20;
    --warning-hover: 170 119 20;
    --warning-active: 232 179 57;
    --warning-content: 255 255 255;
    --error: 211 32 41;
    --error-hover: 166 29 36;
    --error-active: 232 71 73;
    --error-content: 255 255 255;
    --neutral: 90 90 90;
    --neutral-hover: 73 73 73;
    --neutral-active: 106 106 106;
    --neutral-content: 255 255 255;
    --secondary: 203 43 131;
    --secondary-hover: 160 38 105;
    --secondary-active: 224 82 156;
    --secondary-content: 255 255 255;
    --accent: 19 168 168;
    --accent-hover: 19 133 133;
    --accent-active: 51 188 183;
    --accent-content: 255 255 255;
    --info: 43 74 203;
    --info-hover: 38 62 160;
    --info-active: 82 115 224;
    --info-content: 255 255 255;
    --base-100: 29 35 42;
    --base-200: 25 30 36;
    --base-300: 21 25 30;
    --base-content: 166 173 187;
    --ant-neutral-1300: 255 255 255;
    --ant-neutral-1200: 250 250 250;
    --ant-neutral-1100: 245 245 245;
    --ant-neutral-1000: 240 240 240;
    --ant-neutral-900: 217 217 217;
    --ant-neutral-800: 191 191 191;
    --ant-neutral-700: 140 140 140;
    --ant-neutral-600: 89 89 89;
    --ant-neutral-500: 67 67 67;
    --ant-neutral-400: 38 38 38;
    --ant-neutral-300: 31 31 31;
    --ant-neutral-200: 20 20 20;
    --ant-neutral-100: 0 0 0;
    --rounded-box: 1rem;
    --rounded-btn: 0.5rem;
    --rounded-badge: 1.9rem;
    --animation-btn: 0.25s;
    --animation-input: 0.2s;
    --skeleton-duration: 1.2s;
    --border-btn: 1px;
    --tab-border: 1px;
    --tab-radius: 0.5rem
}",
  },
  "legacy": {
    "css": ":root {
  --primary: 22,119,255;
  --primary-hover: 64,150,255;
  --primary-active: 9,88,217;
  --primary-content: 255,255,255;
  --success: 82,196,26;
  --success-hover: 115,209,61;
  --success-active: 56,158,13;
  --success-content: 255,255,255;
  --warning: 250,173,20;
  --warning-hover: 255,197,61;
  --warning-active: 212,136,6;
  --warning-content: 255,255,255;
  --error: 245,34,45;
  --error-hover: 255,77,79;
  --error-active: 207,19,34;
  --error-content: 255,255,255;
  --neutral: 102,102,102;
  --neutral-hover: 115,115,115;
  --neutral-active: 64,64,64;
  --neutral-content: 255,255,255;
  --secondary: 235,47,150;
  --secondary-hover: 247,89,171;
  --secondary-active: 196,29,127;
  --secondary-content: 255,255,255;
  --accent: 19,194,194;
  --accent-hover: 54,207,201;
  --accent-active: 8,151,156;
  --accent-content: 255,255,255;
  --info: 47,84,235;
  --info-hover: 89,126,247;
  --info-active: 29,57,196;
  --info-content: 255,255,255;
  --base-100: 255,255,255;
  --base-200: 242,242,242;
  --base-300: 229,230,230;
  --base-content: 31,41,55;
  --ant-neutral-100: 255,255,255;
  --ant-neutral-200: 250,250,250;
  --ant-neutral-300: 245,245,245;
  --ant-neutral-400: 240,240,240;
  --ant-neutral-500: 217,217,217;
  --ant-neutral-600: 191,191,191;
  --ant-neutral-700: 140,140,140;
  --ant-neutral-800: 89,89,89;
  --ant-neutral-900: 67,67,67;
  --ant-neutral-1000: 38,38,38;
  --ant-neutral-1100: 31,31,31;
  --ant-neutral-1200: 20,20,20;
  --ant-neutral-1300: 0,0,0;
  --rounded-box: 1rem;
  --rounded-btn: 0.5rem;
  --rounded-badge: 1.9rem;
  --animation-btn: 0.25s;
  --animation-input: 0.2s;
  --skeleton-duration: 1.2s;
  --border-btn: 1px;
  --tab-border: 1px;
  --tab-radius: 0.5rem ;
}

[data-mode=dark] {
  --primary: 22,104,220;
  --primary-hover: 21,84,173;
  --primary-active: 60,137,232;
  --primary-content: 255,255,255;
  --success: 73,170,25;
  --success-hover: 60,134,24;
  --success-active: 106,190,57;
  --success-content: 255,255,255;
  --warning: 216,150,20;
  --warning-hover: 170,119,20;
  --warning-active: 232,179,57;
  --warning-content: 255,255,255;
  --error: 211,32,41;
  --error-hover: 166,29,36;
  --error-active: 232,71,73;
  --error-content: 255,255,255;
  --neutral: 90,90,90;
  --neutral-hover: 73,73,73;
  --neutral-active: 106,106,106;
  --neutral-content: 255,255,255;
  --secondary: 203,43,131;
  --secondary-hover: 160,38,105;
  --secondary-active: 224,82,156;
  --secondary-content: 255,255,255;
  --accent: 19,168,168;
  --accent-hover: 19,133,133;
  --accent-active: 51,188,183;
  --accent-content: 255,255,255;
  --info: 43,74,203;
  --info-hover: 38,62,160;
  --info-active: 82,115,224;
  --info-content: 255,255,255;
  --base-100: 29,35,42;
  --base-200: 25,30,36;
  --base-300: 21,25,30;
  --base-content: 166,173,187;
  --ant-neutral-1300: 255,255,255;
  --ant-neutral-1200: 250,250,250;
  --ant-neutral-1100: 245,245,245;
  --ant-neutral-1000: 240,240,240;
  --ant-neutral-900: 217,217,217;
  --ant-neutral-800: 191,191,191;
  --ant-neutral-700: 140,140,140;
  --ant-neutral-600: 89,89,89;
  --ant-neutral-500: 67,67,67;
  --ant-neutral-400: 38,38,38;
  --ant-neutral-300: 31,31,31;
  --ant-neutral-200: 20,20,20;
  --ant-neutral-100: 0,0,0;
  --rounded-box: 1rem;
  --rounded-btn: 0.5rem;
  --rounded-badge: 1.9rem;
  --animation-btn: 0.25s;
  --animation-input: 0.2s;
  --skeleton-duration: 1.2s;
  --border-btn: 1px;
  --tab-border: 1px;
  --tab-radius: 0.5rem ;
}",
    "cssInJs": {
      ":root": {
        "--ice-accent": "19,194,194",
        "--ice-accent-active": "8,151,156",
        "--ice-accent-content": "255,255,255",
        "--ice-accent-hover": "54,207,201",
        "--ice-animation-btn": "0.25s",
        "--ice-animation-input": "0.2s",
        "--ice-ant-neutral-100": "255,255,255",
        "--ice-ant-neutral-1000": "38,38,38",
        "--ice-ant-neutral-1100": "31,31,31",
        "--ice-ant-neutral-1200": "20,20,20",
        "--ice-ant-neutral-1300": "0,0,0",
        "--ice-ant-neutral-200": "250,250,250",
        "--ice-ant-neutral-300": "245,245,245",
        "--ice-ant-neutral-400": "240,240,240",
        "--ice-ant-neutral-500": "217,217,217",
        "--ice-ant-neutral-600": "191,191,191",
        "--ice-ant-neutral-700": "140,140,140",
        "--ice-ant-neutral-800": "89,89,89",
        "--ice-ant-neutral-900": "67,67,67",
        "--ice-base-100": "255,255,255",
        "--ice-base-200": "242,242,242",
        "--ice-base-300": "229,230,230",
        "--ice-base-content": "31,41,55",
        "--ice-border-btn": "1px",
        "--ice-error": "245,34,45",
        "--ice-error-active": "207,19,34",
        "--ice-error-content": "255,255,255",
        "--ice-error-hover": "255,77,79",
        "--ice-info": "47,84,235",
        "--ice-info-active": "29,57,196",
        "--ice-info-content": "255,255,255",
        "--ice-info-hover": "89,126,247",
        "--ice-neutral": "102,102,102",
        "--ice-neutral-active": "64,64,64",
        "--ice-neutral-content": "255,255,255",
        "--ice-neutral-hover": "115,115,115",
        "--ice-primary": "22,119,255",
        "--ice-primary-active": "9,88,217",
        "--ice-primary-content": "255,255,255",
        "--ice-primary-hover": "64,150,255",
        "--ice-rounded-badge": "1.9rem",
        "--ice-rounded-box": "1rem",
        "--ice-rounded-btn": "0.5rem",
        "--ice-secondary": "235,47,150",
        "--ice-secondary-active": "196,29,127",
        "--ice-secondary-content": "255,255,255",
        "--ice-secondary-hover": "247,89,171",
        "--ice-skeleton-duration": "1.2s",
        "--ice-success": "82,196,26",
        "--ice-success-active": "56,158,13",
        "--ice-success-content": "255,255,255",
        "--ice-success-hover": "115,209,61",
        "--ice-tab-border": "1px",
        "--ice-tab-radius": "0.5rem ",
        "--ice-warning": "250,173,20",
        "--ice-warning-active": "212,136,6",
        "--ice-warning-content": "255,255,255",
        "--ice-warning-hover": "255,197,61",
      },
      "[data-mode=dark]": {
        "--ice-accent": "19,168,168",
        "--ice-accent-active": "51,188,183",
        "--ice-accent-content": "255,255,255",
        "--ice-accent-hover": "19,133,133",
        "--ice-animation-btn": "0.25s",
        "--ice-animation-input": "0.2s",
        "--ice-ant-neutral-100": "0,0,0",
        "--ice-ant-neutral-1000": "240,240,240",
        "--ice-ant-neutral-1100": "245,245,245",
        "--ice-ant-neutral-1200": "250,250,250",
        "--ice-ant-neutral-1300": "255,255,255",
        "--ice-ant-neutral-200": "20,20,20",
        "--ice-ant-neutral-300": "31,31,31",
        "--ice-ant-neutral-400": "38,38,38",
        "--ice-ant-neutral-500": "67,67,67",
        "--ice-ant-neutral-600": "89,89,89",
        "--ice-ant-neutral-700": "140,140,140",
        "--ice-ant-neutral-800": "191,191,191",
        "--ice-ant-neutral-900": "217,217,217",
        "--ice-base-100": "29,35,42",
        "--ice-base-200": "25,30,36",
        "--ice-base-300": "21,25,30",
        "--ice-base-content": "166,173,187",
        "--ice-border-btn": "1px",
        "--ice-error": "211,32,41",
        "--ice-error-active": "232,71,73",
        "--ice-error-content": "255,255,255",
        "--ice-error-hover": "166,29,36",
        "--ice-info": "43,74,203",
        "--ice-info-active": "82,115,224",
        "--ice-info-content": "255,255,255",
        "--ice-info-hover": "38,62,160",
        "--ice-neutral": "90,90,90",
        "--ice-neutral-active": "106,106,106",
        "--ice-neutral-content": "255,255,255",
        "--ice-neutral-hover": "73,73,73",
        "--ice-primary": "22,104,220",
        "--ice-primary-active": "60,137,232",
        "--ice-primary-content": "255,255,255",
        "--ice-primary-hover": "21,84,173",
        "--ice-rounded-badge": "1.9rem",
        "--ice-rounded-box": "1rem",
        "--ice-rounded-btn": "0.5rem",
        "--ice-secondary": "203,43,131",
        "--ice-secondary-active": "224,82,156",
        "--ice-secondary-content": "255,255,255",
        "--ice-secondary-hover": "160,38,105",
        "--ice-skeleton-duration": "1.2s",
        "--ice-success": "73,170,25",
        "--ice-success-active": "106,190,57",
        "--ice-success-content": "255,255,255",
        "--ice-success-hover": "60,134,24",
        "--ice-tab-border": "1px",
        "--ice-tab-radius": "0.5rem ",
        "--ice-warning": "216,150,20",
        "--ice-warning-active": "232,179,57",
        "--ice-warning-content": "255,255,255",
        "--ice-warning-hover": "170,119,20",
      },
    },
    "cssRoot": null,
    "cvaParams": undefined,
    "resolvedCss": ":root {
  --ice-primary: 22,119,255;
  --ice-primary-hover: 64,150,255;
  --ice-primary-active: 9,88,217;
  --ice-primary-content: 255,255,255;
  --ice-success: 82,196,26;
  --ice-success-hover: 115,209,61;
  --ice-success-active: 56,158,13;
  --ice-success-content: 255,255,255;
  --ice-warning: 250,173,20;
  --ice-warning-hover: 255,197,61;
  --ice-warning-active: 212,136,6;
  --ice-warning-content: 255,255,255;
  --ice-error: 245,34,45;
  --ice-error-hover: 255,77,79;
  --ice-error-active: 207,19,34;
  --ice-error-content: 255,255,255;
  --ice-neutral: 102,102,102;
  --ice-neutral-hover: 115,115,115;
  --ice-neutral-active: 64,64,64;
  --ice-neutral-content: 255,255,255;
  --ice-secondary: 235,47,150;
  --ice-secondary-hover: 247,89,171;
  --ice-secondary-active: 196,29,127;
  --ice-secondary-content: 255,255,255;
  --ice-accent: 19,194,194;
  --ice-accent-hover: 54,207,201;
  --ice-accent-active: 8,151,156;
  --ice-accent-content: 255,255,255;
  --ice-info: 47,84,235;
  --ice-info-hover: 89,126,247;
  --ice-info-active: 29,57,196;
  --ice-info-content: 255,255,255;
  --ice-base-100: 255,255,255;
  --ice-base-200: 242,242,242;
  --ice-base-300: 229,230,230;
  --ice-base-content: 31,41,55;
  --ice-ant-neutral-100: 255,255,255;
  --ice-ant-neutral-200: 250,250,250;
  --ice-ant-neutral-300: 245,245,245;
  --ice-ant-neutral-400: 240,240,240;
  --ice-ant-neutral-500: 217,217,217;
  --ice-ant-neutral-600: 191,191,191;
  --ice-ant-neutral-700: 140,140,140;
  --ice-ant-neutral-800: 89,89,89;
  --ice-ant-neutral-900: 67,67,67;
  --ice-ant-neutral-1000: 38,38,38;
  --ice-ant-neutral-1100: 31,31,31;
  --ice-ant-neutral-1200: 20,20,20;
  --ice-ant-neutral-1300: 0,0,0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}

[data-mode=dark] {
  --ice-primary: 22,104,220;
  --ice-primary-hover: 21,84,173;
  --ice-primary-active: 60,137,232;
  --ice-primary-content: 255,255,255;
  --ice-success: 73,170,25;
  --ice-success-hover: 60,134,24;
  --ice-success-active: 106,190,57;
  --ice-success-content: 255,255,255;
  --ice-warning: 216,150,20;
  --ice-warning-hover: 170,119,20;
  --ice-warning-active: 232,179,57;
  --ice-warning-content: 255,255,255;
  --ice-error: 211,32,41;
  --ice-error-hover: 166,29,36;
  --ice-error-active: 232,71,73;
  --ice-error-content: 255,255,255;
  --ice-neutral: 90,90,90;
  --ice-neutral-hover: 73,73,73;
  --ice-neutral-active: 106,106,106;
  --ice-neutral-content: 255,255,255;
  --ice-secondary: 203,43,131;
  --ice-secondary-hover: 160,38,105;
  --ice-secondary-active: 224,82,156;
  --ice-secondary-content: 255,255,255;
  --ice-accent: 19,168,168;
  --ice-accent-hover: 19,133,133;
  --ice-accent-active: 51,188,183;
  --ice-accent-content: 255,255,255;
  --ice-info: 43,74,203;
  --ice-info-hover: 38,62,160;
  --ice-info-active: 82,115,224;
  --ice-info-content: 255,255,255;
  --ice-base-100: 29,35,42;
  --ice-base-200: 25,30,36;
  --ice-base-300: 21,25,30;
  --ice-base-content: 166,173,187;
  --ice-ant-neutral-1300: 255,255,255;
  --ice-ant-neutral-1200: 250,250,250;
  --ice-ant-neutral-1100: 245,245,245;
  --ice-ant-neutral-1000: 240,240,240;
  --ice-ant-neutral-900: 217,217,217;
  --ice-ant-neutral-800: 191,191,191;
  --ice-ant-neutral-700: 140,140,140;
  --ice-ant-neutral-600: 89,89,89;
  --ice-ant-neutral-500: 67,67,67;
  --ice-ant-neutral-400: 38,38,38;
  --ice-ant-neutral-300: 31,31,31;
  --ice-ant-neutral-200: 20,20,20;
  --ice-ant-neutral-100: 0,0,0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}",
    "resolvedCssRoot": null,
    "root": null,
    "scss": ":root {
    --primary: 22,119,255;
    --primary-hover: 64,150,255;
    --primary-active: 9,88,217;
    --primary-content: 255,255,255;
    --success: 82,196,26;
    --success-hover: 115,209,61;
    --success-active: 56,158,13;
    --success-content: 255,255,255;
    --warning: 250,173,20;
    --warning-hover: 255,197,61;
    --warning-active: 212,136,6;
    --warning-content: 255,255,255;
    --error: 245,34,45;
    --error-hover: 255,77,79;
    --error-active: 207,19,34;
    --error-content: 255,255,255;
    --neutral: 102,102,102;
    --neutral-hover: 115,115,115;
    --neutral-active: 64,64,64;
    --neutral-content: 255,255,255;
    --secondary: 235,47,150;
    --secondary-hover: 247,89,171;
    --secondary-active: 196,29,127;
    --secondary-content: 255,255,255;
    --accent: 19,194,194;
    --accent-hover: 54,207,201;
    --accent-active: 8,151,156;
    --accent-content: 255,255,255;
    --info: 47,84,235;
    --info-hover: 89,126,247;
    --info-active: 29,57,196;
    --info-content: 255,255,255;
    --base-100: 255,255,255;
    --base-200: 242,242,242;
    --base-300: 229,230,230;
    --base-content: 31,41,55;
    --ant-neutral-100: 255,255,255;
    --ant-neutral-200: 250,250,250;
    --ant-neutral-300: 245,245,245;
    --ant-neutral-400: 240,240,240;
    --ant-neutral-500: 217,217,217;
    --ant-neutral-600: 191,191,191;
    --ant-neutral-700: 140,140,140;
    --ant-neutral-800: 89,89,89;
    --ant-neutral-900: 67,67,67;
    --ant-neutral-1000: 38,38,38;
    --ant-neutral-1100: 31,31,31;
    --ant-neutral-1200: 20,20,20;
    --ant-neutral-1300: 0,0,0;
    --rounded-box: 1rem;
    --rounded-btn: 0.5rem;
    --rounded-badge: 1.9rem;
    --animation-btn: 0.25s;
    --animation-input: 0.2s;
    --skeleton-duration: 1.2s;
    --border-btn: 1px;
    --tab-border: 1px;
    --tab-radius: 0.5rem
}
[data-mode="dark"] {
    --primary: 22,104,220;
    --primary-hover: 21,84,173;
    --primary-active: 60,137,232;
    --primary-content: 255,255,255;
    --success: 73,170,25;
    --success-hover: 60,134,24;
    --success-active: 106,190,57;
    --success-content: 255,255,255;
    --warning: 216,150,20;
    --warning-hover: 170,119,20;
    --warning-active: 232,179,57;
    --warning-content: 255,255,255;
    --error: 211,32,41;
    --error-hover: 166,29,36;
    --error-active: 232,71,73;
    --error-content: 255,255,255;
    --neutral: 90,90,90;
    --neutral-hover: 73,73,73;
    --neutral-active: 106,106,106;
    --neutral-content: 255,255,255;
    --secondary: 203,43,131;
    --secondary-hover: 160,38,105;
    --secondary-active: 224,82,156;
    --secondary-content: 255,255,255;
    --accent: 19,168,168;
    --accent-hover: 19,133,133;
    --accent-active: 51,188,183;
    --accent-content: 255,255,255;
    --info: 43,74,203;
    --info-hover: 38,62,160;
    --info-active: 82,115,224;
    --info-content: 255,255,255;
    --base-100: 29,35,42;
    --base-200: 25,30,36;
    --base-300: 21,25,30;
    --base-content: 166,173,187;
    --ant-neutral-1300: 255,255,255;
    --ant-neutral-1200: 250,250,250;
    --ant-neutral-1100: 245,245,245;
    --ant-neutral-1000: 240,240,240;
    --ant-neutral-900: 217,217,217;
    --ant-neutral-800: 191,191,191;
    --ant-neutral-700: 140,140,140;
    --ant-neutral-600: 89,89,89;
    --ant-neutral-500: 67,67,67;
    --ant-neutral-400: 38,38,38;
    --ant-neutral-300: 31,31,31;
    --ant-neutral-200: 20,20,20;
    --ant-neutral-100: 0,0,0;
    --rounded-box: 1rem;
    --rounded-btn: 0.5rem;
    --rounded-badge: 1.9rem;
    --animation-btn: 0.25s;
    --animation-input: 0.2s;
    --skeleton-duration: 1.2s;
    --border-btn: 1px;
    --tab-border: 1px;
    --tab-radius: 0.5rem
}",
  },
}
`;

exports[`build > build base change default selector case  1`] = `
{
  "index": {
    "css": "page {
  --primary: 22 119 255;
  --primary-hover: 64 150 255;
  --primary-active: 9 88 217;
  --primary-content: 255 255 255;
  --success: 82 196 26;
  --success-hover: 115 209 61;
  --success-active: 56 158 13;
  --success-content: 255 255 255;
  --warning: 250 173 20;
  --warning-hover: 255 197 61;
  --warning-active: 212 136 6;
  --warning-content: 255 255 255;
  --error: 245 34 45;
  --error-hover: 255 77 79;
  --error-active: 207 19 34;
  --error-content: 255 255 255;
  --neutral: 102 102 102;
  --neutral-hover: 115 115 115;
  --neutral-active: 64 64 64;
  --neutral-content: 255 255 255;
  --secondary: 235 47 150;
  --secondary-hover: 247 89 171;
  --secondary-active: 196 29 127;
  --secondary-content: 255 255 255;
  --accent: 19 194 194;
  --accent-hover: 54 207 201;
  --accent-active: 8 151 156;
  --accent-content: 255 255 255;
  --info: 47 84 235;
  --info-hover: 89 126 247;
  --info-active: 29 57 196;
  --info-content: 255 255 255;
  --base-100: 255 255 255;
  --base-200: 242 242 242;
  --base-300: 229 230 230;
  --base-content: 31 41 55;
  --ant-neutral-100: 255 255 255;
  --ant-neutral-200: 250 250 250;
  --ant-neutral-300: 245 245 245;
  --ant-neutral-400: 240 240 240;
  --ant-neutral-500: 217 217 217;
  --ant-neutral-600: 191 191 191;
  --ant-neutral-700: 140 140 140;
  --ant-neutral-800: 89 89 89;
  --ant-neutral-900: 67 67 67;
  --ant-neutral-1000: 38 38 38;
  --ant-neutral-1100: 31 31 31;
  --ant-neutral-1200: 20 20 20;
  --ant-neutral-1300: 0 0 0;
  --rounded-box: 1rem;
  --rounded-btn: 0.5rem;
  --rounded-badge: 1.9rem;
  --animation-btn: 0.25s;
  --animation-input: 0.2s;
  --skeleton-duration: 1.2s;
  --border-btn: 1px;
  --tab-border: 1px;
  --tab-radius: 0.5rem ;
}

.dark {
  --primary: 22 104 220;
  --primary-hover: 21 84 173;
  --primary-active: 60 137 232;
  --primary-content: 255 255 255;
  --success: 73 170 25;
  --success-hover: 60 134 24;
  --success-active: 106 190 57;
  --success-content: 255 255 255;
  --warning: 216 150 20;
  --warning-hover: 170 119 20;
  --warning-active: 232 179 57;
  --warning-content: 255 255 255;
  --error: 211 32 41;
  --error-hover: 166 29 36;
  --error-active: 232 71 73;
  --error-content: 255 255 255;
  --neutral: 90 90 90;
  --neutral-hover: 73 73 73;
  --neutral-active: 106 106 106;
  --neutral-content: 255 255 255;
  --secondary: 203 43 131;
  --secondary-hover: 160 38 105;
  --secondary-active: 224 82 156;
  --secondary-content: 255 255 255;
  --accent: 19 168 168;
  --accent-hover: 19 133 133;
  --accent-active: 51 188 183;
  --accent-content: 255 255 255;
  --info: 43 74 203;
  --info-hover: 38 62 160;
  --info-active: 82 115 224;
  --info-content: 255 255 255;
  --base-100: 29 35 42;
  --base-200: 25 30 36;
  --base-300: 21 25 30;
  --base-content: 166 173 187;
  --ant-neutral-1300: 255 255 255;
  --ant-neutral-1200: 250 250 250;
  --ant-neutral-1100: 245 245 245;
  --ant-neutral-1000: 240 240 240;
  --ant-neutral-900: 217 217 217;
  --ant-neutral-800: 191 191 191;
  --ant-neutral-700: 140 140 140;
  --ant-neutral-600: 89 89 89;
  --ant-neutral-500: 67 67 67;
  --ant-neutral-400: 38 38 38;
  --ant-neutral-300: 31 31 31;
  --ant-neutral-200: 20 20 20;
  --ant-neutral-100: 0 0 0;
  --rounded-box: 1rem;
  --rounded-btn: 0.5rem;
  --rounded-badge: 1.9rem;
  --animation-btn: 0.25s;
  --animation-input: 0.2s;
  --skeleton-duration: 1.2s;
  --border-btn: 1px;
  --tab-border: 1px;
  --tab-radius: 0.5rem ;
}",
    "cssInJs": {
      ".dark": {
        "--ice-accent": "19 168 168",
        "--ice-accent-active": "51 188 183",
        "--ice-accent-content": "255 255 255",
        "--ice-accent-hover": "19 133 133",
        "--ice-animation-btn": "0.25s",
        "--ice-animation-input": "0.2s",
        "--ice-ant-neutral-100": "0 0 0",
        "--ice-ant-neutral-1000": "240 240 240",
        "--ice-ant-neutral-1100": "245 245 245",
        "--ice-ant-neutral-1200": "250 250 250",
        "--ice-ant-neutral-1300": "255 255 255",
        "--ice-ant-neutral-200": "20 20 20",
        "--ice-ant-neutral-300": "31 31 31",
        "--ice-ant-neutral-400": "38 38 38",
        "--ice-ant-neutral-500": "67 67 67",
        "--ice-ant-neutral-600": "89 89 89",
        "--ice-ant-neutral-700": "140 140 140",
        "--ice-ant-neutral-800": "191 191 191",
        "--ice-ant-neutral-900": "217 217 217",
        "--ice-base-100": "29 35 42",
        "--ice-base-200": "25 30 36",
        "--ice-base-300": "21 25 30",
        "--ice-base-content": "166 173 187",
        "--ice-border-btn": "1px",
        "--ice-error": "211 32 41",
        "--ice-error-active": "232 71 73",
        "--ice-error-content": "255 255 255",
        "--ice-error-hover": "166 29 36",
        "--ice-info": "43 74 203",
        "--ice-info-active": "82 115 224",
        "--ice-info-content": "255 255 255",
        "--ice-info-hover": "38 62 160",
        "--ice-neutral": "90 90 90",
        "--ice-neutral-active": "106 106 106",
        "--ice-neutral-content": "255 255 255",
        "--ice-neutral-hover": "73 73 73",
        "--ice-primary": "22 104 220",
        "--ice-primary-active": "60 137 232",
        "--ice-primary-content": "255 255 255",
        "--ice-primary-hover": "21 84 173",
        "--ice-rounded-badge": "1.9rem",
        "--ice-rounded-box": "1rem",
        "--ice-rounded-btn": "0.5rem",
        "--ice-secondary": "203 43 131",
        "--ice-secondary-active": "224 82 156",
        "--ice-secondary-content": "255 255 255",
        "--ice-secondary-hover": "160 38 105",
        "--ice-skeleton-duration": "1.2s",
        "--ice-success": "73 170 25",
        "--ice-success-active": "106 190 57",
        "--ice-success-content": "255 255 255",
        "--ice-success-hover": "60 134 24",
        "--ice-tab-border": "1px",
        "--ice-tab-radius": "0.5rem ",
        "--ice-warning": "216 150 20",
        "--ice-warning-active": "232 179 57",
        "--ice-warning-content": "255 255 255",
        "--ice-warning-hover": "170 119 20",
      },
      "page": {
        "--ice-accent": "19 194 194",
        "--ice-accent-active": "8 151 156",
        "--ice-accent-content": "255 255 255",
        "--ice-accent-hover": "54 207 201",
        "--ice-animation-btn": "0.25s",
        "--ice-animation-input": "0.2s",
        "--ice-ant-neutral-100": "255 255 255",
        "--ice-ant-neutral-1000": "38 38 38",
        "--ice-ant-neutral-1100": "31 31 31",
        "--ice-ant-neutral-1200": "20 20 20",
        "--ice-ant-neutral-1300": "0 0 0",
        "--ice-ant-neutral-200": "250 250 250",
        "--ice-ant-neutral-300": "245 245 245",
        "--ice-ant-neutral-400": "240 240 240",
        "--ice-ant-neutral-500": "217 217 217",
        "--ice-ant-neutral-600": "191 191 191",
        "--ice-ant-neutral-700": "140 140 140",
        "--ice-ant-neutral-800": "89 89 89",
        "--ice-ant-neutral-900": "67 67 67",
        "--ice-base-100": "255 255 255",
        "--ice-base-200": "242 242 242",
        "--ice-base-300": "229 230 230",
        "--ice-base-content": "31 41 55",
        "--ice-border-btn": "1px",
        "--ice-error": "245 34 45",
        "--ice-error-active": "207 19 34",
        "--ice-error-content": "255 255 255",
        "--ice-error-hover": "255 77 79",
        "--ice-info": "47 84 235",
        "--ice-info-active": "29 57 196",
        "--ice-info-content": "255 255 255",
        "--ice-info-hover": "89 126 247",
        "--ice-neutral": "102 102 102",
        "--ice-neutral-active": "64 64 64",
        "--ice-neutral-content": "255 255 255",
        "--ice-neutral-hover": "115 115 115",
        "--ice-primary": "22 119 255",
        "--ice-primary-active": "9 88 217",
        "--ice-primary-content": "255 255 255",
        "--ice-primary-hover": "64 150 255",
        "--ice-rounded-badge": "1.9rem",
        "--ice-rounded-box": "1rem",
        "--ice-rounded-btn": "0.5rem",
        "--ice-secondary": "235 47 150",
        "--ice-secondary-active": "196 29 127",
        "--ice-secondary-content": "255 255 255",
        "--ice-secondary-hover": "247 89 171",
        "--ice-skeleton-duration": "1.2s",
        "--ice-success": "82 196 26",
        "--ice-success-active": "56 158 13",
        "--ice-success-content": "255 255 255",
        "--ice-success-hover": "115 209 61",
        "--ice-tab-border": "1px",
        "--ice-tab-radius": "0.5rem ",
        "--ice-warning": "250 173 20",
        "--ice-warning-active": "212 136 6",
        "--ice-warning-content": "255 255 255",
        "--ice-warning-hover": "255 197 61",
      },
    },
    "cssRoot": null,
    "cvaParams": undefined,
    "resolvedCss": "page {
  --ice-primary: 22 119 255;
  --ice-primary-hover: 64 150 255;
  --ice-primary-active: 9 88 217;
  --ice-primary-content: 255 255 255;
  --ice-success: 82 196 26;
  --ice-success-hover: 115 209 61;
  --ice-success-active: 56 158 13;
  --ice-success-content: 255 255 255;
  --ice-warning: 250 173 20;
  --ice-warning-hover: 255 197 61;
  --ice-warning-active: 212 136 6;
  --ice-warning-content: 255 255 255;
  --ice-error: 245 34 45;
  --ice-error-hover: 255 77 79;
  --ice-error-active: 207 19 34;
  --ice-error-content: 255 255 255;
  --ice-neutral: 102 102 102;
  --ice-neutral-hover: 115 115 115;
  --ice-neutral-active: 64 64 64;
  --ice-neutral-content: 255 255 255;
  --ice-secondary: 235 47 150;
  --ice-secondary-hover: 247 89 171;
  --ice-secondary-active: 196 29 127;
  --ice-secondary-content: 255 255 255;
  --ice-accent: 19 194 194;
  --ice-accent-hover: 54 207 201;
  --ice-accent-active: 8 151 156;
  --ice-accent-content: 255 255 255;
  --ice-info: 47 84 235;
  --ice-info-hover: 89 126 247;
  --ice-info-active: 29 57 196;
  --ice-info-content: 255 255 255;
  --ice-base-100: 255 255 255;
  --ice-base-200: 242 242 242;
  --ice-base-300: 229 230 230;
  --ice-base-content: 31 41 55;
  --ice-ant-neutral-100: 255 255 255;
  --ice-ant-neutral-200: 250 250 250;
  --ice-ant-neutral-300: 245 245 245;
  --ice-ant-neutral-400: 240 240 240;
  --ice-ant-neutral-500: 217 217 217;
  --ice-ant-neutral-600: 191 191 191;
  --ice-ant-neutral-700: 140 140 140;
  --ice-ant-neutral-800: 89 89 89;
  --ice-ant-neutral-900: 67 67 67;
  --ice-ant-neutral-1000: 38 38 38;
  --ice-ant-neutral-1100: 31 31 31;
  --ice-ant-neutral-1200: 20 20 20;
  --ice-ant-neutral-1300: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}

.dark {
  --ice-primary: 22 104 220;
  --ice-primary-hover: 21 84 173;
  --ice-primary-active: 60 137 232;
  --ice-primary-content: 255 255 255;
  --ice-success: 73 170 25;
  --ice-success-hover: 60 134 24;
  --ice-success-active: 106 190 57;
  --ice-success-content: 255 255 255;
  --ice-warning: 216 150 20;
  --ice-warning-hover: 170 119 20;
  --ice-warning-active: 232 179 57;
  --ice-warning-content: 255 255 255;
  --ice-error: 211 32 41;
  --ice-error-hover: 166 29 36;
  --ice-error-active: 232 71 73;
  --ice-error-content: 255 255 255;
  --ice-neutral: 90 90 90;
  --ice-neutral-hover: 73 73 73;
  --ice-neutral-active: 106 106 106;
  --ice-neutral-content: 255 255 255;
  --ice-secondary: 203 43 131;
  --ice-secondary-hover: 160 38 105;
  --ice-secondary-active: 224 82 156;
  --ice-secondary-content: 255 255 255;
  --ice-accent: 19 168 168;
  --ice-accent-hover: 19 133 133;
  --ice-accent-active: 51 188 183;
  --ice-accent-content: 255 255 255;
  --ice-info: 43 74 203;
  --ice-info-hover: 38 62 160;
  --ice-info-active: 82 115 224;
  --ice-info-content: 255 255 255;
  --ice-base-100: 29 35 42;
  --ice-base-200: 25 30 36;
  --ice-base-300: 21 25 30;
  --ice-base-content: 166 173 187;
  --ice-ant-neutral-1300: 255 255 255;
  --ice-ant-neutral-1200: 250 250 250;
  --ice-ant-neutral-1100: 245 245 245;
  --ice-ant-neutral-1000: 240 240 240;
  --ice-ant-neutral-900: 217 217 217;
  --ice-ant-neutral-800: 191 191 191;
  --ice-ant-neutral-700: 140 140 140;
  --ice-ant-neutral-600: 89 89 89;
  --ice-ant-neutral-500: 67 67 67;
  --ice-ant-neutral-400: 38 38 38;
  --ice-ant-neutral-300: 31 31 31;
  --ice-ant-neutral-200: 20 20 20;
  --ice-ant-neutral-100: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}",
    "resolvedCssRoot": null,
    "root": null,
    "scss": "page {
    --primary: 22 119 255;
    --primary-hover: 64 150 255;
    --primary-active: 9 88 217;
    --primary-content: 255 255 255;
    --success: 82 196 26;
    --success-hover: 115 209 61;
    --success-active: 56 158 13;
    --success-content: 255 255 255;
    --warning: 250 173 20;
    --warning-hover: 255 197 61;
    --warning-active: 212 136 6;
    --warning-content: 255 255 255;
    --error: 245 34 45;
    --error-hover: 255 77 79;
    --error-active: 207 19 34;
    --error-content: 255 255 255;
    --neutral: 102 102 102;
    --neutral-hover: 115 115 115;
    --neutral-active: 64 64 64;
    --neutral-content: 255 255 255;
    --secondary: 235 47 150;
    --secondary-hover: 247 89 171;
    --secondary-active: 196 29 127;
    --secondary-content: 255 255 255;
    --accent: 19 194 194;
    --accent-hover: 54 207 201;
    --accent-active: 8 151 156;
    --accent-content: 255 255 255;
    --info: 47 84 235;
    --info-hover: 89 126 247;
    --info-active: 29 57 196;
    --info-content: 255 255 255;
    --base-100: 255 255 255;
    --base-200: 242 242 242;
    --base-300: 229 230 230;
    --base-content: 31 41 55;
    --ant-neutral-100: 255 255 255;
    --ant-neutral-200: 250 250 250;
    --ant-neutral-300: 245 245 245;
    --ant-neutral-400: 240 240 240;
    --ant-neutral-500: 217 217 217;
    --ant-neutral-600: 191 191 191;
    --ant-neutral-700: 140 140 140;
    --ant-neutral-800: 89 89 89;
    --ant-neutral-900: 67 67 67;
    --ant-neutral-1000: 38 38 38;
    --ant-neutral-1100: 31 31 31;
    --ant-neutral-1200: 20 20 20;
    --ant-neutral-1300: 0 0 0;
    --rounded-box: 1rem;
    --rounded-btn: 0.5rem;
    --rounded-badge: 1.9rem;
    --animation-btn: 0.25s;
    --animation-input: 0.2s;
    --skeleton-duration: 1.2s;
    --border-btn: 1px;
    --tab-border: 1px;
    --tab-radius: 0.5rem
}
.dark {
    --primary: 22 104 220;
    --primary-hover: 21 84 173;
    --primary-active: 60 137 232;
    --primary-content: 255 255 255;
    --success: 73 170 25;
    --success-hover: 60 134 24;
    --success-active: 106 190 57;
    --success-content: 255 255 255;
    --warning: 216 150 20;
    --warning-hover: 170 119 20;
    --warning-active: 232 179 57;
    --warning-content: 255 255 255;
    --error: 211 32 41;
    --error-hover: 166 29 36;
    --error-active: 232 71 73;
    --error-content: 255 255 255;
    --neutral: 90 90 90;
    --neutral-hover: 73 73 73;
    --neutral-active: 106 106 106;
    --neutral-content: 255 255 255;
    --secondary: 203 43 131;
    --secondary-hover: 160 38 105;
    --secondary-active: 224 82 156;
    --secondary-content: 255 255 255;
    --accent: 19 168 168;
    --accent-hover: 19 133 133;
    --accent-active: 51 188 183;
    --accent-content: 255 255 255;
    --info: 43 74 203;
    --info-hover: 38 62 160;
    --info-active: 82 115 224;
    --info-content: 255 255 255;
    --base-100: 29 35 42;
    --base-200: 25 30 36;
    --base-300: 21 25 30;
    --base-content: 166 173 187;
    --ant-neutral-1300: 255 255 255;
    --ant-neutral-1200: 250 250 250;
    --ant-neutral-1100: 245 245 245;
    --ant-neutral-1000: 240 240 240;
    --ant-neutral-900: 217 217 217;
    --ant-neutral-800: 191 191 191;
    --ant-neutral-700: 140 140 140;
    --ant-neutral-600: 89 89 89;
    --ant-neutral-500: 67 67 67;
    --ant-neutral-400: 38 38 38;
    --ant-neutral-300: 31 31 31;
    --ant-neutral-200: 20 20 20;
    --ant-neutral-100: 0 0 0;
    --rounded-box: 1rem;
    --rounded-btn: 0.5rem;
    --rounded-badge: 1.9rem;
    --animation-btn: 0.25s;
    --animation-input: 0.2s;
    --skeleton-duration: 1.2s;
    --border-btn: 1px;
    --tab-border: 1px;
    --tab-radius: 0.5rem
}",
  },
  "legacy": {
    "css": "page {
  --primary: 22,119,255;
  --primary-hover: 64,150,255;
  --primary-active: 9,88,217;
  --primary-content: 255,255,255;
  --success: 82,196,26;
  --success-hover: 115,209,61;
  --success-active: 56,158,13;
  --success-content: 255,255,255;
  --warning: 250,173,20;
  --warning-hover: 255,197,61;
  --warning-active: 212,136,6;
  --warning-content: 255,255,255;
  --error: 245,34,45;
  --error-hover: 255,77,79;
  --error-active: 207,19,34;
  --error-content: 255,255,255;
  --neutral: 102,102,102;
  --neutral-hover: 115,115,115;
  --neutral-active: 64,64,64;
  --neutral-content: 255,255,255;
  --secondary: 235,47,150;
  --secondary-hover: 247,89,171;
  --secondary-active: 196,29,127;
  --secondary-content: 255,255,255;
  --accent: 19,194,194;
  --accent-hover: 54,207,201;
  --accent-active: 8,151,156;
  --accent-content: 255,255,255;
  --info: 47,84,235;
  --info-hover: 89,126,247;
  --info-active: 29,57,196;
  --info-content: 255,255,255;
  --base-100: 255,255,255;
  --base-200: 242,242,242;
  --base-300: 229,230,230;
  --base-content: 31,41,55;
  --ant-neutral-100: 255,255,255;
  --ant-neutral-200: 250,250,250;
  --ant-neutral-300: 245,245,245;
  --ant-neutral-400: 240,240,240;
  --ant-neutral-500: 217,217,217;
  --ant-neutral-600: 191,191,191;
  --ant-neutral-700: 140,140,140;
  --ant-neutral-800: 89,89,89;
  --ant-neutral-900: 67,67,67;
  --ant-neutral-1000: 38,38,38;
  --ant-neutral-1100: 31,31,31;
  --ant-neutral-1200: 20,20,20;
  --ant-neutral-1300: 0,0,0;
  --rounded-box: 1rem;
  --rounded-btn: 0.5rem;
  --rounded-badge: 1.9rem;
  --animation-btn: 0.25s;
  --animation-input: 0.2s;
  --skeleton-duration: 1.2s;
  --border-btn: 1px;
  --tab-border: 1px;
  --tab-radius: 0.5rem ;
}

.dark {
  --primary: 22,104,220;
  --primary-hover: 21,84,173;
  --primary-active: 60,137,232;
  --primary-content: 255,255,255;
  --success: 73,170,25;
  --success-hover: 60,134,24;
  --success-active: 106,190,57;
  --success-content: 255,255,255;
  --warning: 216,150,20;
  --warning-hover: 170,119,20;
  --warning-active: 232,179,57;
  --warning-content: 255,255,255;
  --error: 211,32,41;
  --error-hover: 166,29,36;
  --error-active: 232,71,73;
  --error-content: 255,255,255;
  --neutral: 90,90,90;
  --neutral-hover: 73,73,73;
  --neutral-active: 106,106,106;
  --neutral-content: 255,255,255;
  --secondary: 203,43,131;
  --secondary-hover: 160,38,105;
  --secondary-active: 224,82,156;
  --secondary-content: 255,255,255;
  --accent: 19,168,168;
  --accent-hover: 19,133,133;
  --accent-active: 51,188,183;
  --accent-content: 255,255,255;
  --info: 43,74,203;
  --info-hover: 38,62,160;
  --info-active: 82,115,224;
  --info-content: 255,255,255;
  --base-100: 29,35,42;
  --base-200: 25,30,36;
  --base-300: 21,25,30;
  --base-content: 166,173,187;
  --ant-neutral-1300: 255,255,255;
  --ant-neutral-1200: 250,250,250;
  --ant-neutral-1100: 245,245,245;
  --ant-neutral-1000: 240,240,240;
  --ant-neutral-900: 217,217,217;
  --ant-neutral-800: 191,191,191;
  --ant-neutral-700: 140,140,140;
  --ant-neutral-600: 89,89,89;
  --ant-neutral-500: 67,67,67;
  --ant-neutral-400: 38,38,38;
  --ant-neutral-300: 31,31,31;
  --ant-neutral-200: 20,20,20;
  --ant-neutral-100: 0,0,0;
  --rounded-box: 1rem;
  --rounded-btn: 0.5rem;
  --rounded-badge: 1.9rem;
  --animation-btn: 0.25s;
  --animation-input: 0.2s;
  --skeleton-duration: 1.2s;
  --border-btn: 1px;
  --tab-border: 1px;
  --tab-radius: 0.5rem ;
}",
    "cssInJs": {
      ".dark": {
        "--ice-accent": "19,168,168",
        "--ice-accent-active": "51,188,183",
        "--ice-accent-content": "255,255,255",
        "--ice-accent-hover": "19,133,133",
        "--ice-animation-btn": "0.25s",
        "--ice-animation-input": "0.2s",
        "--ice-ant-neutral-100": "0,0,0",
        "--ice-ant-neutral-1000": "240,240,240",
        "--ice-ant-neutral-1100": "245,245,245",
        "--ice-ant-neutral-1200": "250,250,250",
        "--ice-ant-neutral-1300": "255,255,255",
        "--ice-ant-neutral-200": "20,20,20",
        "--ice-ant-neutral-300": "31,31,31",
        "--ice-ant-neutral-400": "38,38,38",
        "--ice-ant-neutral-500": "67,67,67",
        "--ice-ant-neutral-600": "89,89,89",
        "--ice-ant-neutral-700": "140,140,140",
        "--ice-ant-neutral-800": "191,191,191",
        "--ice-ant-neutral-900": "217,217,217",
        "--ice-base-100": "29,35,42",
        "--ice-base-200": "25,30,36",
        "--ice-base-300": "21,25,30",
        "--ice-base-content": "166,173,187",
        "--ice-border-btn": "1px",
        "--ice-error": "211,32,41",
        "--ice-error-active": "232,71,73",
        "--ice-error-content": "255,255,255",
        "--ice-error-hover": "166,29,36",
        "--ice-info": "43,74,203",
        "--ice-info-active": "82,115,224",
        "--ice-info-content": "255,255,255",
        "--ice-info-hover": "38,62,160",
        "--ice-neutral": "90,90,90",
        "--ice-neutral-active": "106,106,106",
        "--ice-neutral-content": "255,255,255",
        "--ice-neutral-hover": "73,73,73",
        "--ice-primary": "22,104,220",
        "--ice-primary-active": "60,137,232",
        "--ice-primary-content": "255,255,255",
        "--ice-primary-hover": "21,84,173",
        "--ice-rounded-badge": "1.9rem",
        "--ice-rounded-box": "1rem",
        "--ice-rounded-btn": "0.5rem",
        "--ice-secondary": "203,43,131",
        "--ice-secondary-active": "224,82,156",
        "--ice-secondary-content": "255,255,255",
        "--ice-secondary-hover": "160,38,105",
        "--ice-skeleton-duration": "1.2s",
        "--ice-success": "73,170,25",
        "--ice-success-active": "106,190,57",
        "--ice-success-content": "255,255,255",
        "--ice-success-hover": "60,134,24",
        "--ice-tab-border": "1px",
        "--ice-tab-radius": "0.5rem ",
        "--ice-warning": "216,150,20",
        "--ice-warning-active": "232,179,57",
        "--ice-warning-content": "255,255,255",
        "--ice-warning-hover": "170,119,20",
      },
      "page": {
        "--ice-accent": "19,194,194",
        "--ice-accent-active": "8,151,156",
        "--ice-accent-content": "255,255,255",
        "--ice-accent-hover": "54,207,201",
        "--ice-animation-btn": "0.25s",
        "--ice-animation-input": "0.2s",
        "--ice-ant-neutral-100": "255,255,255",
        "--ice-ant-neutral-1000": "38,38,38",
        "--ice-ant-neutral-1100": "31,31,31",
        "--ice-ant-neutral-1200": "20,20,20",
        "--ice-ant-neutral-1300": "0,0,0",
        "--ice-ant-neutral-200": "250,250,250",
        "--ice-ant-neutral-300": "245,245,245",
        "--ice-ant-neutral-400": "240,240,240",
        "--ice-ant-neutral-500": "217,217,217",
        "--ice-ant-neutral-600": "191,191,191",
        "--ice-ant-neutral-700": "140,140,140",
        "--ice-ant-neutral-800": "89,89,89",
        "--ice-ant-neutral-900": "67,67,67",
        "--ice-base-100": "255,255,255",
        "--ice-base-200": "242,242,242",
        "--ice-base-300": "229,230,230",
        "--ice-base-content": "31,41,55",
        "--ice-border-btn": "1px",
        "--ice-error": "245,34,45",
        "--ice-error-active": "207,19,34",
        "--ice-error-content": "255,255,255",
        "--ice-error-hover": "255,77,79",
        "--ice-info": "47,84,235",
        "--ice-info-active": "29,57,196",
        "--ice-info-content": "255,255,255",
        "--ice-info-hover": "89,126,247",
        "--ice-neutral": "102,102,102",
        "--ice-neutral-active": "64,64,64",
        "--ice-neutral-content": "255,255,255",
        "--ice-neutral-hover": "115,115,115",
        "--ice-primary": "22,119,255",
        "--ice-primary-active": "9,88,217",
        "--ice-primary-content": "255,255,255",
        "--ice-primary-hover": "64,150,255",
        "--ice-rounded-badge": "1.9rem",
        "--ice-rounded-box": "1rem",
        "--ice-rounded-btn": "0.5rem",
        "--ice-secondary": "235,47,150",
        "--ice-secondary-active": "196,29,127",
        "--ice-secondary-content": "255,255,255",
        "--ice-secondary-hover": "247,89,171",
        "--ice-skeleton-duration": "1.2s",
        "--ice-success": "82,196,26",
        "--ice-success-active": "56,158,13",
        "--ice-success-content": "255,255,255",
        "--ice-success-hover": "115,209,61",
        "--ice-tab-border": "1px",
        "--ice-tab-radius": "0.5rem ",
        "--ice-warning": "250,173,20",
        "--ice-warning-active": "212,136,6",
        "--ice-warning-content": "255,255,255",
        "--ice-warning-hover": "255,197,61",
      },
    },
    "cssRoot": null,
    "cvaParams": undefined,
    "resolvedCss": "page {
  --ice-primary: 22,119,255;
  --ice-primary-hover: 64,150,255;
  --ice-primary-active: 9,88,217;
  --ice-primary-content: 255,255,255;
  --ice-success: 82,196,26;
  --ice-success-hover: 115,209,61;
  --ice-success-active: 56,158,13;
  --ice-success-content: 255,255,255;
  --ice-warning: 250,173,20;
  --ice-warning-hover: 255,197,61;
  --ice-warning-active: 212,136,6;
  --ice-warning-content: 255,255,255;
  --ice-error: 245,34,45;
  --ice-error-hover: 255,77,79;
  --ice-error-active: 207,19,34;
  --ice-error-content: 255,255,255;
  --ice-neutral: 102,102,102;
  --ice-neutral-hover: 115,115,115;
  --ice-neutral-active: 64,64,64;
  --ice-neutral-content: 255,255,255;
  --ice-secondary: 235,47,150;
  --ice-secondary-hover: 247,89,171;
  --ice-secondary-active: 196,29,127;
  --ice-secondary-content: 255,255,255;
  --ice-accent: 19,194,194;
  --ice-accent-hover: 54,207,201;
  --ice-accent-active: 8,151,156;
  --ice-accent-content: 255,255,255;
  --ice-info: 47,84,235;
  --ice-info-hover: 89,126,247;
  --ice-info-active: 29,57,196;
  --ice-info-content: 255,255,255;
  --ice-base-100: 255,255,255;
  --ice-base-200: 242,242,242;
  --ice-base-300: 229,230,230;
  --ice-base-content: 31,41,55;
  --ice-ant-neutral-100: 255,255,255;
  --ice-ant-neutral-200: 250,250,250;
  --ice-ant-neutral-300: 245,245,245;
  --ice-ant-neutral-400: 240,240,240;
  --ice-ant-neutral-500: 217,217,217;
  --ice-ant-neutral-600: 191,191,191;
  --ice-ant-neutral-700: 140,140,140;
  --ice-ant-neutral-800: 89,89,89;
  --ice-ant-neutral-900: 67,67,67;
  --ice-ant-neutral-1000: 38,38,38;
  --ice-ant-neutral-1100: 31,31,31;
  --ice-ant-neutral-1200: 20,20,20;
  --ice-ant-neutral-1300: 0,0,0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}

.dark {
  --ice-primary: 22,104,220;
  --ice-primary-hover: 21,84,173;
  --ice-primary-active: 60,137,232;
  --ice-primary-content: 255,255,255;
  --ice-success: 73,170,25;
  --ice-success-hover: 60,134,24;
  --ice-success-active: 106,190,57;
  --ice-success-content: 255,255,255;
  --ice-warning: 216,150,20;
  --ice-warning-hover: 170,119,20;
  --ice-warning-active: 232,179,57;
  --ice-warning-content: 255,255,255;
  --ice-error: 211,32,41;
  --ice-error-hover: 166,29,36;
  --ice-error-active: 232,71,73;
  --ice-error-content: 255,255,255;
  --ice-neutral: 90,90,90;
  --ice-neutral-hover: 73,73,73;
  --ice-neutral-active: 106,106,106;
  --ice-neutral-content: 255,255,255;
  --ice-secondary: 203,43,131;
  --ice-secondary-hover: 160,38,105;
  --ice-secondary-active: 224,82,156;
  --ice-secondary-content: 255,255,255;
  --ice-accent: 19,168,168;
  --ice-accent-hover: 19,133,133;
  --ice-accent-active: 51,188,183;
  --ice-accent-content: 255,255,255;
  --ice-info: 43,74,203;
  --ice-info-hover: 38,62,160;
  --ice-info-active: 82,115,224;
  --ice-info-content: 255,255,255;
  --ice-base-100: 29,35,42;
  --ice-base-200: 25,30,36;
  --ice-base-300: 21,25,30;
  --ice-base-content: 166,173,187;
  --ice-ant-neutral-1300: 255,255,255;
  --ice-ant-neutral-1200: 250,250,250;
  --ice-ant-neutral-1100: 245,245,245;
  --ice-ant-neutral-1000: 240,240,240;
  --ice-ant-neutral-900: 217,217,217;
  --ice-ant-neutral-800: 191,191,191;
  --ice-ant-neutral-700: 140,140,140;
  --ice-ant-neutral-600: 89,89,89;
  --ice-ant-neutral-500: 67,67,67;
  --ice-ant-neutral-400: 38,38,38;
  --ice-ant-neutral-300: 31,31,31;
  --ice-ant-neutral-200: 20,20,20;
  --ice-ant-neutral-100: 0,0,0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}",
    "resolvedCssRoot": null,
    "root": null,
    "scss": "page {
    --primary: 22,119,255;
    --primary-hover: 64,150,255;
    --primary-active: 9,88,217;
    --primary-content: 255,255,255;
    --success: 82,196,26;
    --success-hover: 115,209,61;
    --success-active: 56,158,13;
    --success-content: 255,255,255;
    --warning: 250,173,20;
    --warning-hover: 255,197,61;
    --warning-active: 212,136,6;
    --warning-content: 255,255,255;
    --error: 245,34,45;
    --error-hover: 255,77,79;
    --error-active: 207,19,34;
    --error-content: 255,255,255;
    --neutral: 102,102,102;
    --neutral-hover: 115,115,115;
    --neutral-active: 64,64,64;
    --neutral-content: 255,255,255;
    --secondary: 235,47,150;
    --secondary-hover: 247,89,171;
    --secondary-active: 196,29,127;
    --secondary-content: 255,255,255;
    --accent: 19,194,194;
    --accent-hover: 54,207,201;
    --accent-active: 8,151,156;
    --accent-content: 255,255,255;
    --info: 47,84,235;
    --info-hover: 89,126,247;
    --info-active: 29,57,196;
    --info-content: 255,255,255;
    --base-100: 255,255,255;
    --base-200: 242,242,242;
    --base-300: 229,230,230;
    --base-content: 31,41,55;
    --ant-neutral-100: 255,255,255;
    --ant-neutral-200: 250,250,250;
    --ant-neutral-300: 245,245,245;
    --ant-neutral-400: 240,240,240;
    --ant-neutral-500: 217,217,217;
    --ant-neutral-600: 191,191,191;
    --ant-neutral-700: 140,140,140;
    --ant-neutral-800: 89,89,89;
    --ant-neutral-900: 67,67,67;
    --ant-neutral-1000: 38,38,38;
    --ant-neutral-1100: 31,31,31;
    --ant-neutral-1200: 20,20,20;
    --ant-neutral-1300: 0,0,0;
    --rounded-box: 1rem;
    --rounded-btn: 0.5rem;
    --rounded-badge: 1.9rem;
    --animation-btn: 0.25s;
    --animation-input: 0.2s;
    --skeleton-duration: 1.2s;
    --border-btn: 1px;
    --tab-border: 1px;
    --tab-radius: 0.5rem
}
.dark {
    --primary: 22,104,220;
    --primary-hover: 21,84,173;
    --primary-active: 60,137,232;
    --primary-content: 255,255,255;
    --success: 73,170,25;
    --success-hover: 60,134,24;
    --success-active: 106,190,57;
    --success-content: 255,255,255;
    --warning: 216,150,20;
    --warning-hover: 170,119,20;
    --warning-active: 232,179,57;
    --warning-content: 255,255,255;
    --error: 211,32,41;
    --error-hover: 166,29,36;
    --error-active: 232,71,73;
    --error-content: 255,255,255;
    --neutral: 90,90,90;
    --neutral-hover: 73,73,73;
    --neutral-active: 106,106,106;
    --neutral-content: 255,255,255;
    --secondary: 203,43,131;
    --secondary-hover: 160,38,105;
    --secondary-active: 224,82,156;
    --secondary-content: 255,255,255;
    --accent: 19,168,168;
    --accent-hover: 19,133,133;
    --accent-active: 51,188,183;
    --accent-content: 255,255,255;
    --info: 43,74,203;
    --info-hover: 38,62,160;
    --info-active: 82,115,224;
    --info-content: 255,255,255;
    --base-100: 29,35,42;
    --base-200: 25,30,36;
    --base-300: 21,25,30;
    --base-content: 166,173,187;
    --ant-neutral-1300: 255,255,255;
    --ant-neutral-1200: 250,250,250;
    --ant-neutral-1100: 245,245,245;
    --ant-neutral-1000: 240,240,240;
    --ant-neutral-900: 217,217,217;
    --ant-neutral-800: 191,191,191;
    --ant-neutral-700: 140,140,140;
    --ant-neutral-600: 89,89,89;
    --ant-neutral-500: 67,67,67;
    --ant-neutral-400: 38,38,38;
    --ant-neutral-300: 31,31,31;
    --ant-neutral-200: 20,20,20;
    --ant-neutral-100: 0,0,0;
    --rounded-box: 1rem;
    --rounded-btn: 0.5rem;
    --rounded-badge: 1.9rem;
    --animation-btn: 0.25s;
    --animation-input: 0.2s;
    --skeleton-duration: 1.2s;
    --border-btn: 1px;
    --tab-border: 1px;
    --tab-radius: 0.5rem
}",
  },
}
`;

exports[`build > build base with custom types 1`] = `
{
  "index": {
    "css": ":root {
  --primary: 19 194 194;
  --primary-hover: 54 207 201;
  --primary-active: 8 151 156;
  --primary-content: 255 255 255;
  --success: 82 196 26;
  --success-hover: 115 209 61;
  --success-active: 56 158 13;
  --success-content: 255 255 255;
  --warning: 250 173 20;
  --warning-hover: 255 197 61;
  --warning-active: 212 136 6;
  --warning-content: 255 255 255;
  --error: 245 34 45;
  --error-hover: 255 77 79;
  --error-active: 207 19 34;
  --error-content: 255 255 255;
  --neutral: 102 102 102;
  --neutral-hover: 115 115 115;
  --neutral-active: 64 64 64;
  --neutral-content: 255 255 255;
  --secondary: 235 47 150;
  --secondary-hover: 247 89 171;
  --secondary-active: 196 29 127;
  --secondary-content: 255 255 255;
  --accent: 19 194 194;
  --accent-hover: 54 207 201;
  --accent-active: 8 151 156;
  --accent-content: 255 255 255;
  --info: 47 84 235;
  --info-hover: 89 126 247;
  --info-active: 29 57 196;
  --info-content: 255 255 255;
  --base-100: 255 255 255;
  --base-200: 242 242 242;
  --base-300: 229 230 230;
  --base-content: 31 41 55;
  --ant-neutral-100: 255 255 255;
  --ant-neutral-200: 250 250 250;
  --ant-neutral-300: 245 245 245;
  --ant-neutral-400: 240 240 240;
  --ant-neutral-500: 217 217 217;
  --ant-neutral-600: 191 191 191;
  --ant-neutral-700: 140 140 140;
  --ant-neutral-800: 89 89 89;
  --ant-neutral-900: 67 67 67;
  --ant-neutral-1000: 38 38 38;
  --ant-neutral-1100: 31 31 31;
  --ant-neutral-1200: 20 20 20;
  --ant-neutral-1300: 0 0 0;
  --rounded-box: 1rem;
  --rounded-btn: 0.5rem;
  --rounded-badge: 1.9rem;
  --animation-btn: 0.25s;
  --animation-input: 0.2s;
  --skeleton-duration: 1.2s;
  --border-btn: 1px;
  --tab-border: 1px;
  --tab-radius: 0.5rem ;
}

[data-mode=dark] {
  --primary: 19 168 168;
  --primary-hover: 49 181 177;
  --primary-active: 8 126 130;
  --primary-content: 255 255 255;
  --success: 73 170 25;
  --success-hover: 60 134 24;
  --success-active: 106 190 57;
  --success-content: 255 255 255;
  --warning: 216 150 20;
  --warning-hover: 170 119 20;
  --warning-active: 232 179 57;
  --warning-content: 255 255 255;
  --error: 211 32 41;
  --error-hover: 166 29 36;
  --error-active: 232 71 73;
  --error-content: 255 255 255;
  --neutral: 90 90 90;
  --neutral-hover: 73 73 73;
  --neutral-active: 106 106 106;
  --neutral-content: 255 255 255;
  --secondary: 203 43 131;
  --secondary-hover: 160 38 105;
  --secondary-active: 224 82 156;
  --secondary-content: 255 255 255;
  --accent: 19 168 168;
  --accent-hover: 19 133 133;
  --accent-active: 51 188 183;
  --accent-content: 255 255 255;
  --info: 43 74 203;
  --info-hover: 38 62 160;
  --info-active: 82 115 224;
  --info-content: 255 255 255;
  --base-100: 29 35 42;
  --base-200: 25 30 36;
  --base-300: 21 25 30;
  --base-content: 166 173 187;
  --ant-neutral-1300: 255 255 255;
  --ant-neutral-1200: 250 250 250;
  --ant-neutral-1100: 245 245 245;
  --ant-neutral-1000: 240 240 240;
  --ant-neutral-900: 217 217 217;
  --ant-neutral-800: 191 191 191;
  --ant-neutral-700: 140 140 140;
  --ant-neutral-600: 89 89 89;
  --ant-neutral-500: 67 67 67;
  --ant-neutral-400: 38 38 38;
  --ant-neutral-300: 31 31 31;
  --ant-neutral-200: 20 20 20;
  --ant-neutral-100: 0 0 0;
  --rounded-box: 1rem;
  --rounded-btn: 0.5rem;
  --rounded-badge: 1.9rem;
  --animation-btn: 0.25s;
  --animation-input: 0.2s;
  --skeleton-duration: 1.2s;
  --border-btn: 1px;
  --tab-border: 1px;
  --tab-radius: 0.5rem ;
}",
    "cssInJs": {
      ":root": {
        "--ice-accent": "19 194 194",
        "--ice-accent-active": "8 151 156",
        "--ice-accent-content": "255 255 255",
        "--ice-accent-hover": "54 207 201",
        "--ice-animation-btn": "0.25s",
        "--ice-animation-input": "0.2s",
        "--ice-ant-neutral-100": "255 255 255",
        "--ice-ant-neutral-1000": "38 38 38",
        "--ice-ant-neutral-1100": "31 31 31",
        "--ice-ant-neutral-1200": "20 20 20",
        "--ice-ant-neutral-1300": "0 0 0",
        "--ice-ant-neutral-200": "250 250 250",
        "--ice-ant-neutral-300": "245 245 245",
        "--ice-ant-neutral-400": "240 240 240",
        "--ice-ant-neutral-500": "217 217 217",
        "--ice-ant-neutral-600": "191 191 191",
        "--ice-ant-neutral-700": "140 140 140",
        "--ice-ant-neutral-800": "89 89 89",
        "--ice-ant-neutral-900": "67 67 67",
        "--ice-base-100": "255 255 255",
        "--ice-base-200": "242 242 242",
        "--ice-base-300": "229 230 230",
        "--ice-base-content": "31 41 55",
        "--ice-border-btn": "1px",
        "--ice-error": "245 34 45",
        "--ice-error-active": "207 19 34",
        "--ice-error-content": "255 255 255",
        "--ice-error-hover": "255 77 79",
        "--ice-info": "47 84 235",
        "--ice-info-active": "29 57 196",
        "--ice-info-content": "255 255 255",
        "--ice-info-hover": "89 126 247",
        "--ice-neutral": "102 102 102",
        "--ice-neutral-active": "64 64 64",
        "--ice-neutral-content": "255 255 255",
        "--ice-neutral-hover": "115 115 115",
        "--ice-primary": "19 194 194",
        "--ice-primary-active": "8 151 156",
        "--ice-primary-content": "255 255 255",
        "--ice-primary-hover": "54 207 201",
        "--ice-rounded-badge": "1.9rem",
        "--ice-rounded-box": "1rem",
        "--ice-rounded-btn": "0.5rem",
        "--ice-secondary": "235 47 150",
        "--ice-secondary-active": "196 29 127",
        "--ice-secondary-content": "255 255 255",
        "--ice-secondary-hover": "247 89 171",
        "--ice-skeleton-duration": "1.2s",
        "--ice-success": "82 196 26",
        "--ice-success-active": "56 158 13",
        "--ice-success-content": "255 255 255",
        "--ice-success-hover": "115 209 61",
        "--ice-tab-border": "1px",
        "--ice-tab-radius": "0.5rem ",
        "--ice-warning": "250 173 20",
        "--ice-warning-active": "212 136 6",
        "--ice-warning-content": "255 255 255",
        "--ice-warning-hover": "255 197 61",
      },
      "[data-mode=dark]": {
        "--ice-accent": "19 168 168",
        "--ice-accent-active": "51 188 183",
        "--ice-accent-content": "255 255 255",
        "--ice-accent-hover": "19 133 133",
        "--ice-animation-btn": "0.25s",
        "--ice-animation-input": "0.2s",
        "--ice-ant-neutral-100": "0 0 0",
        "--ice-ant-neutral-1000": "240 240 240",
        "--ice-ant-neutral-1100": "245 245 245",
        "--ice-ant-neutral-1200": "250 250 250",
        "--ice-ant-neutral-1300": "255 255 255",
        "--ice-ant-neutral-200": "20 20 20",
        "--ice-ant-neutral-300": "31 31 31",
        "--ice-ant-neutral-400": "38 38 38",
        "--ice-ant-neutral-500": "67 67 67",
        "--ice-ant-neutral-600": "89 89 89",
        "--ice-ant-neutral-700": "140 140 140",
        "--ice-ant-neutral-800": "191 191 191",
        "--ice-ant-neutral-900": "217 217 217",
        "--ice-base-100": "29 35 42",
        "--ice-base-200": "25 30 36",
        "--ice-base-300": "21 25 30",
        "--ice-base-content": "166 173 187",
        "--ice-border-btn": "1px",
        "--ice-error": "211 32 41",
        "--ice-error-active": "232 71 73",
        "--ice-error-content": "255 255 255",
        "--ice-error-hover": "166 29 36",
        "--ice-info": "43 74 203",
        "--ice-info-active": "82 115 224",
        "--ice-info-content": "255 255 255",
        "--ice-info-hover": "38 62 160",
        "--ice-neutral": "90 90 90",
        "--ice-neutral-active": "106 106 106",
        "--ice-neutral-content": "255 255 255",
        "--ice-neutral-hover": "73 73 73",
        "--ice-primary": "19 168 168",
        "--ice-primary-active": "8 126 130",
        "--ice-primary-content": "255 255 255",
        "--ice-primary-hover": "49 181 177",
        "--ice-rounded-badge": "1.9rem",
        "--ice-rounded-box": "1rem",
        "--ice-rounded-btn": "0.5rem",
        "--ice-secondary": "203 43 131",
        "--ice-secondary-active": "224 82 156",
        "--ice-secondary-content": "255 255 255",
        "--ice-secondary-hover": "160 38 105",
        "--ice-skeleton-duration": "1.2s",
        "--ice-success": "73 170 25",
        "--ice-success-active": "106 190 57",
        "--ice-success-content": "255 255 255",
        "--ice-success-hover": "60 134 24",
        "--ice-tab-border": "1px",
        "--ice-tab-radius": "0.5rem ",
        "--ice-warning": "216 150 20",
        "--ice-warning-active": "232 179 57",
        "--ice-warning-content": "255 255 255",
        "--ice-warning-hover": "170 119 20",
      },
    },
    "cssRoot": null,
    "cvaParams": undefined,
    "resolvedCss": ":root {
  --ice-primary: 19 194 194;
  --ice-primary-hover: 54 207 201;
  --ice-primary-active: 8 151 156;
  --ice-primary-content: 255 255 255;
  --ice-success: 82 196 26;
  --ice-success-hover: 115 209 61;
  --ice-success-active: 56 158 13;
  --ice-success-content: 255 255 255;
  --ice-warning: 250 173 20;
  --ice-warning-hover: 255 197 61;
  --ice-warning-active: 212 136 6;
  --ice-warning-content: 255 255 255;
  --ice-error: 245 34 45;
  --ice-error-hover: 255 77 79;
  --ice-error-active: 207 19 34;
  --ice-error-content: 255 255 255;
  --ice-neutral: 102 102 102;
  --ice-neutral-hover: 115 115 115;
  --ice-neutral-active: 64 64 64;
  --ice-neutral-content: 255 255 255;
  --ice-secondary: 235 47 150;
  --ice-secondary-hover: 247 89 171;
  --ice-secondary-active: 196 29 127;
  --ice-secondary-content: 255 255 255;
  --ice-accent: 19 194 194;
  --ice-accent-hover: 54 207 201;
  --ice-accent-active: 8 151 156;
  --ice-accent-content: 255 255 255;
  --ice-info: 47 84 235;
  --ice-info-hover: 89 126 247;
  --ice-info-active: 29 57 196;
  --ice-info-content: 255 255 255;
  --ice-base-100: 255 255 255;
  --ice-base-200: 242 242 242;
  --ice-base-300: 229 230 230;
  --ice-base-content: 31 41 55;
  --ice-ant-neutral-100: 255 255 255;
  --ice-ant-neutral-200: 250 250 250;
  --ice-ant-neutral-300: 245 245 245;
  --ice-ant-neutral-400: 240 240 240;
  --ice-ant-neutral-500: 217 217 217;
  --ice-ant-neutral-600: 191 191 191;
  --ice-ant-neutral-700: 140 140 140;
  --ice-ant-neutral-800: 89 89 89;
  --ice-ant-neutral-900: 67 67 67;
  --ice-ant-neutral-1000: 38 38 38;
  --ice-ant-neutral-1100: 31 31 31;
  --ice-ant-neutral-1200: 20 20 20;
  --ice-ant-neutral-1300: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}

[data-mode=dark] {
  --ice-primary: 19 168 168;
  --ice-primary-hover: 49 181 177;
  --ice-primary-active: 8 126 130;
  --ice-primary-content: 255 255 255;
  --ice-success: 73 170 25;
  --ice-success-hover: 60 134 24;
  --ice-success-active: 106 190 57;
  --ice-success-content: 255 255 255;
  --ice-warning: 216 150 20;
  --ice-warning-hover: 170 119 20;
  --ice-warning-active: 232 179 57;
  --ice-warning-content: 255 255 255;
  --ice-error: 211 32 41;
  --ice-error-hover: 166 29 36;
  --ice-error-active: 232 71 73;
  --ice-error-content: 255 255 255;
  --ice-neutral: 90 90 90;
  --ice-neutral-hover: 73 73 73;
  --ice-neutral-active: 106 106 106;
  --ice-neutral-content: 255 255 255;
  --ice-secondary: 203 43 131;
  --ice-secondary-hover: 160 38 105;
  --ice-secondary-active: 224 82 156;
  --ice-secondary-content: 255 255 255;
  --ice-accent: 19 168 168;
  --ice-accent-hover: 19 133 133;
  --ice-accent-active: 51 188 183;
  --ice-accent-content: 255 255 255;
  --ice-info: 43 74 203;
  --ice-info-hover: 38 62 160;
  --ice-info-active: 82 115 224;
  --ice-info-content: 255 255 255;
  --ice-base-100: 29 35 42;
  --ice-base-200: 25 30 36;
  --ice-base-300: 21 25 30;
  --ice-base-content: 166 173 187;
  --ice-ant-neutral-1300: 255 255 255;
  --ice-ant-neutral-1200: 250 250 250;
  --ice-ant-neutral-1100: 245 245 245;
  --ice-ant-neutral-1000: 240 240 240;
  --ice-ant-neutral-900: 217 217 217;
  --ice-ant-neutral-800: 191 191 191;
  --ice-ant-neutral-700: 140 140 140;
  --ice-ant-neutral-600: 89 89 89;
  --ice-ant-neutral-500: 67 67 67;
  --ice-ant-neutral-400: 38 38 38;
  --ice-ant-neutral-300: 31 31 31;
  --ice-ant-neutral-200: 20 20 20;
  --ice-ant-neutral-100: 0 0 0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}",
    "resolvedCssRoot": null,
    "root": null,
    "scss": ":root {
    --primary: 19 194 194;
    --primary-hover: 54 207 201;
    --primary-active: 8 151 156;
    --primary-content: 255 255 255;
    --success: 82 196 26;
    --success-hover: 115 209 61;
    --success-active: 56 158 13;
    --success-content: 255 255 255;
    --warning: 250 173 20;
    --warning-hover: 255 197 61;
    --warning-active: 212 136 6;
    --warning-content: 255 255 255;
    --error: 245 34 45;
    --error-hover: 255 77 79;
    --error-active: 207 19 34;
    --error-content: 255 255 255;
    --neutral: 102 102 102;
    --neutral-hover: 115 115 115;
    --neutral-active: 64 64 64;
    --neutral-content: 255 255 255;
    --secondary: 235 47 150;
    --secondary-hover: 247 89 171;
    --secondary-active: 196 29 127;
    --secondary-content: 255 255 255;
    --accent: 19 194 194;
    --accent-hover: 54 207 201;
    --accent-active: 8 151 156;
    --accent-content: 255 255 255;
    --info: 47 84 235;
    --info-hover: 89 126 247;
    --info-active: 29 57 196;
    --info-content: 255 255 255;
    --base-100: 255 255 255;
    --base-200: 242 242 242;
    --base-300: 229 230 230;
    --base-content: 31 41 55;
    --ant-neutral-100: 255 255 255;
    --ant-neutral-200: 250 250 250;
    --ant-neutral-300: 245 245 245;
    --ant-neutral-400: 240 240 240;
    --ant-neutral-500: 217 217 217;
    --ant-neutral-600: 191 191 191;
    --ant-neutral-700: 140 140 140;
    --ant-neutral-800: 89 89 89;
    --ant-neutral-900: 67 67 67;
    --ant-neutral-1000: 38 38 38;
    --ant-neutral-1100: 31 31 31;
    --ant-neutral-1200: 20 20 20;
    --ant-neutral-1300: 0 0 0;
    --rounded-box: 1rem;
    --rounded-btn: 0.5rem;
    --rounded-badge: 1.9rem;
    --animation-btn: 0.25s;
    --animation-input: 0.2s;
    --skeleton-duration: 1.2s;
    --border-btn: 1px;
    --tab-border: 1px;
    --tab-radius: 0.5rem
}
[data-mode="dark"] {
    --primary: 19 168 168;
    --primary-hover: 49 181 177;
    --primary-active: 8 126 130;
    --primary-content: 255 255 255;
    --success: 73 170 25;
    --success-hover: 60 134 24;
    --success-active: 106 190 57;
    --success-content: 255 255 255;
    --warning: 216 150 20;
    --warning-hover: 170 119 20;
    --warning-active: 232 179 57;
    --warning-content: 255 255 255;
    --error: 211 32 41;
    --error-hover: 166 29 36;
    --error-active: 232 71 73;
    --error-content: 255 255 255;
    --neutral: 90 90 90;
    --neutral-hover: 73 73 73;
    --neutral-active: 106 106 106;
    --neutral-content: 255 255 255;
    --secondary: 203 43 131;
    --secondary-hover: 160 38 105;
    --secondary-active: 224 82 156;
    --secondary-content: 255 255 255;
    --accent: 19 168 168;
    --accent-hover: 19 133 133;
    --accent-active: 51 188 183;
    --accent-content: 255 255 255;
    --info: 43 74 203;
    --info-hover: 38 62 160;
    --info-active: 82 115 224;
    --info-content: 255 255 255;
    --base-100: 29 35 42;
    --base-200: 25 30 36;
    --base-300: 21 25 30;
    --base-content: 166 173 187;
    --ant-neutral-1300: 255 255 255;
    --ant-neutral-1200: 250 250 250;
    --ant-neutral-1100: 245 245 245;
    --ant-neutral-1000: 240 240 240;
    --ant-neutral-900: 217 217 217;
    --ant-neutral-800: 191 191 191;
    --ant-neutral-700: 140 140 140;
    --ant-neutral-600: 89 89 89;
    --ant-neutral-500: 67 67 67;
    --ant-neutral-400: 38 38 38;
    --ant-neutral-300: 31 31 31;
    --ant-neutral-200: 20 20 20;
    --ant-neutral-100: 0 0 0;
    --rounded-box: 1rem;
    --rounded-btn: 0.5rem;
    --rounded-badge: 1.9rem;
    --animation-btn: 0.25s;
    --animation-input: 0.2s;
    --skeleton-duration: 1.2s;
    --border-btn: 1px;
    --tab-border: 1px;
    --tab-radius: 0.5rem
}",
  },
  "legacy": {
    "css": ":root {
  --primary: 19,194,194;
  --primary-hover: 54,207,201;
  --primary-active: 8,151,156;
  --primary-content: 255,255,255;
  --success: 82,196,26;
  --success-hover: 115,209,61;
  --success-active: 56,158,13;
  --success-content: 255,255,255;
  --warning: 250,173,20;
  --warning-hover: 255,197,61;
  --warning-active: 212,136,6;
  --warning-content: 255,255,255;
  --error: 245,34,45;
  --error-hover: 255,77,79;
  --error-active: 207,19,34;
  --error-content: 255,255,255;
  --neutral: 102,102,102;
  --neutral-hover: 115,115,115;
  --neutral-active: 64,64,64;
  --neutral-content: 255,255,255;
  --secondary: 235,47,150;
  --secondary-hover: 247,89,171;
  --secondary-active: 196,29,127;
  --secondary-content: 255,255,255;
  --accent: 19,194,194;
  --accent-hover: 54,207,201;
  --accent-active: 8,151,156;
  --accent-content: 255,255,255;
  --info: 47,84,235;
  --info-hover: 89,126,247;
  --info-active: 29,57,196;
  --info-content: 255,255,255;
  --base-100: 255,255,255;
  --base-200: 242,242,242;
  --base-300: 229,230,230;
  --base-content: 31,41,55;
  --ant-neutral-100: 255,255,255;
  --ant-neutral-200: 250,250,250;
  --ant-neutral-300: 245,245,245;
  --ant-neutral-400: 240,240,240;
  --ant-neutral-500: 217,217,217;
  --ant-neutral-600: 191,191,191;
  --ant-neutral-700: 140,140,140;
  --ant-neutral-800: 89,89,89;
  --ant-neutral-900: 67,67,67;
  --ant-neutral-1000: 38,38,38;
  --ant-neutral-1100: 31,31,31;
  --ant-neutral-1200: 20,20,20;
  --ant-neutral-1300: 0,0,0;
  --rounded-box: 1rem;
  --rounded-btn: 0.5rem;
  --rounded-badge: 1.9rem;
  --animation-btn: 0.25s;
  --animation-input: 0.2s;
  --skeleton-duration: 1.2s;
  --border-btn: 1px;
  --tab-border: 1px;
  --tab-radius: 0.5rem ;
}

[data-mode=dark] {
  --primary: 19,168,168;
  --primary-hover: 49,181,177;
  --primary-active: 8,126,130;
  --primary-content: 255,255,255;
  --success: 73,170,25;
  --success-hover: 60,134,24;
  --success-active: 106,190,57;
  --success-content: 255,255,255;
  --warning: 216,150,20;
  --warning-hover: 170,119,20;
  --warning-active: 232,179,57;
  --warning-content: 255,255,255;
  --error: 211,32,41;
  --error-hover: 166,29,36;
  --error-active: 232,71,73;
  --error-content: 255,255,255;
  --neutral: 90,90,90;
  --neutral-hover: 73,73,73;
  --neutral-active: 106,106,106;
  --neutral-content: 255,255,255;
  --secondary: 203,43,131;
  --secondary-hover: 160,38,105;
  --secondary-active: 224,82,156;
  --secondary-content: 255,255,255;
  --accent: 19,168,168;
  --accent-hover: 19,133,133;
  --accent-active: 51,188,183;
  --accent-content: 255,255,255;
  --info: 43,74,203;
  --info-hover: 38,62,160;
  --info-active: 82,115,224;
  --info-content: 255,255,255;
  --base-100: 29,35,42;
  --base-200: 25,30,36;
  --base-300: 21,25,30;
  --base-content: 166,173,187;
  --ant-neutral-1300: 255,255,255;
  --ant-neutral-1200: 250,250,250;
  --ant-neutral-1100: 245,245,245;
  --ant-neutral-1000: 240,240,240;
  --ant-neutral-900: 217,217,217;
  --ant-neutral-800: 191,191,191;
  --ant-neutral-700: 140,140,140;
  --ant-neutral-600: 89,89,89;
  --ant-neutral-500: 67,67,67;
  --ant-neutral-400: 38,38,38;
  --ant-neutral-300: 31,31,31;
  --ant-neutral-200: 20,20,20;
  --ant-neutral-100: 0,0,0;
  --rounded-box: 1rem;
  --rounded-btn: 0.5rem;
  --rounded-badge: 1.9rem;
  --animation-btn: 0.25s;
  --animation-input: 0.2s;
  --skeleton-duration: 1.2s;
  --border-btn: 1px;
  --tab-border: 1px;
  --tab-radius: 0.5rem ;
}",
    "cssInJs": {
      ":root": {
        "--ice-accent": "19,194,194",
        "--ice-accent-active": "8,151,156",
        "--ice-accent-content": "255,255,255",
        "--ice-accent-hover": "54,207,201",
        "--ice-animation-btn": "0.25s",
        "--ice-animation-input": "0.2s",
        "--ice-ant-neutral-100": "255,255,255",
        "--ice-ant-neutral-1000": "38,38,38",
        "--ice-ant-neutral-1100": "31,31,31",
        "--ice-ant-neutral-1200": "20,20,20",
        "--ice-ant-neutral-1300": "0,0,0",
        "--ice-ant-neutral-200": "250,250,250",
        "--ice-ant-neutral-300": "245,245,245",
        "--ice-ant-neutral-400": "240,240,240",
        "--ice-ant-neutral-500": "217,217,217",
        "--ice-ant-neutral-600": "191,191,191",
        "--ice-ant-neutral-700": "140,140,140",
        "--ice-ant-neutral-800": "89,89,89",
        "--ice-ant-neutral-900": "67,67,67",
        "--ice-base-100": "255,255,255",
        "--ice-base-200": "242,242,242",
        "--ice-base-300": "229,230,230",
        "--ice-base-content": "31,41,55",
        "--ice-border-btn": "1px",
        "--ice-error": "245,34,45",
        "--ice-error-active": "207,19,34",
        "--ice-error-content": "255,255,255",
        "--ice-error-hover": "255,77,79",
        "--ice-info": "47,84,235",
        "--ice-info-active": "29,57,196",
        "--ice-info-content": "255,255,255",
        "--ice-info-hover": "89,126,247",
        "--ice-neutral": "102,102,102",
        "--ice-neutral-active": "64,64,64",
        "--ice-neutral-content": "255,255,255",
        "--ice-neutral-hover": "115,115,115",
        "--ice-primary": "19,194,194",
        "--ice-primary-active": "8,151,156",
        "--ice-primary-content": "255,255,255",
        "--ice-primary-hover": "54,207,201",
        "--ice-rounded-badge": "1.9rem",
        "--ice-rounded-box": "1rem",
        "--ice-rounded-btn": "0.5rem",
        "--ice-secondary": "235,47,150",
        "--ice-secondary-active": "196,29,127",
        "--ice-secondary-content": "255,255,255",
        "--ice-secondary-hover": "247,89,171",
        "--ice-skeleton-duration": "1.2s",
        "--ice-success": "82,196,26",
        "--ice-success-active": "56,158,13",
        "--ice-success-content": "255,255,255",
        "--ice-success-hover": "115,209,61",
        "--ice-tab-border": "1px",
        "--ice-tab-radius": "0.5rem ",
        "--ice-warning": "250,173,20",
        "--ice-warning-active": "212,136,6",
        "--ice-warning-content": "255,255,255",
        "--ice-warning-hover": "255,197,61",
      },
      "[data-mode=dark]": {
        "--ice-accent": "19,168,168",
        "--ice-accent-active": "51,188,183",
        "--ice-accent-content": "255,255,255",
        "--ice-accent-hover": "19,133,133",
        "--ice-animation-btn": "0.25s",
        "--ice-animation-input": "0.2s",
        "--ice-ant-neutral-100": "0,0,0",
        "--ice-ant-neutral-1000": "240,240,240",
        "--ice-ant-neutral-1100": "245,245,245",
        "--ice-ant-neutral-1200": "250,250,250",
        "--ice-ant-neutral-1300": "255,255,255",
        "--ice-ant-neutral-200": "20,20,20",
        "--ice-ant-neutral-300": "31,31,31",
        "--ice-ant-neutral-400": "38,38,38",
        "--ice-ant-neutral-500": "67,67,67",
        "--ice-ant-neutral-600": "89,89,89",
        "--ice-ant-neutral-700": "140,140,140",
        "--ice-ant-neutral-800": "191,191,191",
        "--ice-ant-neutral-900": "217,217,217",
        "--ice-base-100": "29,35,42",
        "--ice-base-200": "25,30,36",
        "--ice-base-300": "21,25,30",
        "--ice-base-content": "166,173,187",
        "--ice-border-btn": "1px",
        "--ice-error": "211,32,41",
        "--ice-error-active": "232,71,73",
        "--ice-error-content": "255,255,255",
        "--ice-error-hover": "166,29,36",
        "--ice-info": "43,74,203",
        "--ice-info-active": "82,115,224",
        "--ice-info-content": "255,255,255",
        "--ice-info-hover": "38,62,160",
        "--ice-neutral": "90,90,90",
        "--ice-neutral-active": "106,106,106",
        "--ice-neutral-content": "255,255,255",
        "--ice-neutral-hover": "73,73,73",
        "--ice-primary": "19,168,168",
        "--ice-primary-active": "8,126,130",
        "--ice-primary-content": "255,255,255",
        "--ice-primary-hover": "49,181,177",
        "--ice-rounded-badge": "1.9rem",
        "--ice-rounded-box": "1rem",
        "--ice-rounded-btn": "0.5rem",
        "--ice-secondary": "203,43,131",
        "--ice-secondary-active": "224,82,156",
        "--ice-secondary-content": "255,255,255",
        "--ice-secondary-hover": "160,38,105",
        "--ice-skeleton-duration": "1.2s",
        "--ice-success": "73,170,25",
        "--ice-success-active": "106,190,57",
        "--ice-success-content": "255,255,255",
        "--ice-success-hover": "60,134,24",
        "--ice-tab-border": "1px",
        "--ice-tab-radius": "0.5rem ",
        "--ice-warning": "216,150,20",
        "--ice-warning-active": "232,179,57",
        "--ice-warning-content": "255,255,255",
        "--ice-warning-hover": "170,119,20",
      },
    },
    "cssRoot": null,
    "cvaParams": undefined,
    "resolvedCss": ":root {
  --ice-primary: 19,194,194;
  --ice-primary-hover: 54,207,201;
  --ice-primary-active: 8,151,156;
  --ice-primary-content: 255,255,255;
  --ice-success: 82,196,26;
  --ice-success-hover: 115,209,61;
  --ice-success-active: 56,158,13;
  --ice-success-content: 255,255,255;
  --ice-warning: 250,173,20;
  --ice-warning-hover: 255,197,61;
  --ice-warning-active: 212,136,6;
  --ice-warning-content: 255,255,255;
  --ice-error: 245,34,45;
  --ice-error-hover: 255,77,79;
  --ice-error-active: 207,19,34;
  --ice-error-content: 255,255,255;
  --ice-neutral: 102,102,102;
  --ice-neutral-hover: 115,115,115;
  --ice-neutral-active: 64,64,64;
  --ice-neutral-content: 255,255,255;
  --ice-secondary: 235,47,150;
  --ice-secondary-hover: 247,89,171;
  --ice-secondary-active: 196,29,127;
  --ice-secondary-content: 255,255,255;
  --ice-accent: 19,194,194;
  --ice-accent-hover: 54,207,201;
  --ice-accent-active: 8,151,156;
  --ice-accent-content: 255,255,255;
  --ice-info: 47,84,235;
  --ice-info-hover: 89,126,247;
  --ice-info-active: 29,57,196;
  --ice-info-content: 255,255,255;
  --ice-base-100: 255,255,255;
  --ice-base-200: 242,242,242;
  --ice-base-300: 229,230,230;
  --ice-base-content: 31,41,55;
  --ice-ant-neutral-100: 255,255,255;
  --ice-ant-neutral-200: 250,250,250;
  --ice-ant-neutral-300: 245,245,245;
  --ice-ant-neutral-400: 240,240,240;
  --ice-ant-neutral-500: 217,217,217;
  --ice-ant-neutral-600: 191,191,191;
  --ice-ant-neutral-700: 140,140,140;
  --ice-ant-neutral-800: 89,89,89;
  --ice-ant-neutral-900: 67,67,67;
  --ice-ant-neutral-1000: 38,38,38;
  --ice-ant-neutral-1100: 31,31,31;
  --ice-ant-neutral-1200: 20,20,20;
  --ice-ant-neutral-1300: 0,0,0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}

[data-mode=dark] {
  --ice-primary: 19,168,168;
  --ice-primary-hover: 49,181,177;
  --ice-primary-active: 8,126,130;
  --ice-primary-content: 255,255,255;
  --ice-success: 73,170,25;
  --ice-success-hover: 60,134,24;
  --ice-success-active: 106,190,57;
  --ice-success-content: 255,255,255;
  --ice-warning: 216,150,20;
  --ice-warning-hover: 170,119,20;
  --ice-warning-active: 232,179,57;
  --ice-warning-content: 255,255,255;
  --ice-error: 211,32,41;
  --ice-error-hover: 166,29,36;
  --ice-error-active: 232,71,73;
  --ice-error-content: 255,255,255;
  --ice-neutral: 90,90,90;
  --ice-neutral-hover: 73,73,73;
  --ice-neutral-active: 106,106,106;
  --ice-neutral-content: 255,255,255;
  --ice-secondary: 203,43,131;
  --ice-secondary-hover: 160,38,105;
  --ice-secondary-active: 224,82,156;
  --ice-secondary-content: 255,255,255;
  --ice-accent: 19,168,168;
  --ice-accent-hover: 19,133,133;
  --ice-accent-active: 51,188,183;
  --ice-accent-content: 255,255,255;
  --ice-info: 43,74,203;
  --ice-info-hover: 38,62,160;
  --ice-info-active: 82,115,224;
  --ice-info-content: 255,255,255;
  --ice-base-100: 29,35,42;
  --ice-base-200: 25,30,36;
  --ice-base-300: 21,25,30;
  --ice-base-content: 166,173,187;
  --ice-ant-neutral-1300: 255,255,255;
  --ice-ant-neutral-1200: 250,250,250;
  --ice-ant-neutral-1100: 245,245,245;
  --ice-ant-neutral-1000: 240,240,240;
  --ice-ant-neutral-900: 217,217,217;
  --ice-ant-neutral-800: 191,191,191;
  --ice-ant-neutral-700: 140,140,140;
  --ice-ant-neutral-600: 89,89,89;
  --ice-ant-neutral-500: 67,67,67;
  --ice-ant-neutral-400: 38,38,38;
  --ice-ant-neutral-300: 31,31,31;
  --ice-ant-neutral-200: 20,20,20;
  --ice-ant-neutral-100: 0,0,0;
  --ice-rounded-box: 1rem;
  --ice-rounded-btn: 0.5rem;
  --ice-rounded-badge: 1.9rem;
  --ice-animation-btn: 0.25s;
  --ice-animation-input: 0.2s;
  --ice-skeleton-duration: 1.2s;
  --ice-border-btn: 1px;
  --ice-tab-border: 1px;
  --ice-tab-radius: 0.5rem ;
}",
    "resolvedCssRoot": null,
    "root": null,
    "scss": ":root {
    --primary: 19,194,194;
    --primary-hover: 54,207,201;
    --primary-active: 8,151,156;
    --primary-content: 255,255,255;
    --success: 82,196,26;
    --success-hover: 115,209,61;
    --success-active: 56,158,13;
    --success-content: 255,255,255;
    --warning: 250,173,20;
    --warning-hover: 255,197,61;
    --warning-active: 212,136,6;
    --warning-content: 255,255,255;
    --error: 245,34,45;
    --error-hover: 255,77,79;
    --error-active: 207,19,34;
    --error-content: 255,255,255;
    --neutral: 102,102,102;
    --neutral-hover: 115,115,115;
    --neutral-active: 64,64,64;
    --neutral-content: 255,255,255;
    --secondary: 235,47,150;
    --secondary-hover: 247,89,171;
    --secondary-active: 196,29,127;
    --secondary-content: 255,255,255;
    --accent: 19,194,194;
    --accent-hover: 54,207,201;
    --accent-active: 8,151,156;
    --accent-content: 255,255,255;
    --info: 47,84,235;
    --info-hover: 89,126,247;
    --info-active: 29,57,196;
    --info-content: 255,255,255;
    --base-100: 255,255,255;
    --base-200: 242,242,242;
    --base-300: 229,230,230;
    --base-content: 31,41,55;
    --ant-neutral-100: 255,255,255;
    --ant-neutral-200: 250,250,250;
    --ant-neutral-300: 245,245,245;
    --ant-neutral-400: 240,240,240;
    --ant-neutral-500: 217,217,217;
    --ant-neutral-600: 191,191,191;
    --ant-neutral-700: 140,140,140;
    --ant-neutral-800: 89,89,89;
    --ant-neutral-900: 67,67,67;
    --ant-neutral-1000: 38,38,38;
    --ant-neutral-1100: 31,31,31;
    --ant-neutral-1200: 20,20,20;
    --ant-neutral-1300: 0,0,0;
    --rounded-box: 1rem;
    --rounded-btn: 0.5rem;
    --rounded-badge: 1.9rem;
    --animation-btn: 0.25s;
    --animation-input: 0.2s;
    --skeleton-duration: 1.2s;
    --border-btn: 1px;
    --tab-border: 1px;
    --tab-radius: 0.5rem
}
[data-mode="dark"] {
    --primary: 19,168,168;
    --primary-hover: 49,181,177;
    --primary-active: 8,126,130;
    --primary-content: 255,255,255;
    --success: 73,170,25;
    --success-hover: 60,134,24;
    --success-active: 106,190,57;
    --success-content: 255,255,255;
    --warning: 216,150,20;
    --warning-hover: 170,119,20;
    --warning-active: 232,179,57;
    --warning-content: 255,255,255;
    --error: 211,32,41;
    --error-hover: 166,29,36;
    --error-active: 232,71,73;
    --error-content: 255,255,255;
    --neutral: 90,90,90;
    --neutral-hover: 73,73,73;
    --neutral-active: 106,106,106;
    --neutral-content: 255,255,255;
    --secondary: 203,43,131;
    --secondary-hover: 160,38,105;
    --secondary-active: 224,82,156;
    --secondary-content: 255,255,255;
    --accent: 19,168,168;
    --accent-hover: 19,133,133;
    --accent-active: 51,188,183;
    --accent-content: 255,255,255;
    --info: 43,74,203;
    --info-hover: 38,62,160;
    --info-active: 82,115,224;
    --info-content: 255,255,255;
    --base-100: 29,35,42;
    --base-200: 25,30,36;
    --base-300: 21,25,30;
    --base-content: 166,173,187;
    --ant-neutral-1300: 255,255,255;
    --ant-neutral-1200: 250,250,250;
    --ant-neutral-1100: 245,245,245;
    --ant-neutral-1000: 240,240,240;
    --ant-neutral-900: 217,217,217;
    --ant-neutral-800: 191,191,191;
    --ant-neutral-700: 140,140,140;
    --ant-neutral-600: 89,89,89;
    --ant-neutral-500: 67,67,67;
    --ant-neutral-400: 38,38,38;
    --ant-neutral-300: 31,31,31;
    --ant-neutral-200: 20,20,20;
    --ant-neutral-100: 0,0,0;
    --rounded-box: 1rem;
    --rounded-btn: 0.5rem;
    --rounded-badge: 1.9rem;
    --animation-btn: 0.25s;
    --animation-input: 0.2s;
    --skeleton-duration: 1.2s;
    --border-btn: 1px;
    --tab-border: 1px;
    --tab-radius: 0.5rem
}",
  },
}
`;

exports[`build > build nothing 1`] = `undefined`;
